--- a/floral/Ivy.html
+++ b/floral/Ivy.html
@@ -2,22 +2,14 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Free Crochet Pattern - Ivy Rose Doily </title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1bDnJCfXPWsQ2cWgGZWLvVn5sE4EDLHm2&export=download"><img src="images/ivy.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Ivy Rose Crochet Doily Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Ivy Rose Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-<b>AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40</b> 2 balls -White 1 ball Shaded Yellows or 
+ <br>AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40 2 balls -White 1 ball Shaded Yellows or 
 <br><b>The Famous "PURITAN" STAR SPANGLED MERCERIZED CROCHET COTTON, Article 40</b> 5 balls Silver Spangle 2 balls Pink Spangle.
-<br> Steel crochet hook No. 7 <br></b>Approximate size:</b> 25 inches in diameter Center of Doily is worked after Wreath of Flower Motifs are completed. 
+<br> Steel crochet hook No. 7 
+<br></b>Approximate size:</b> 25 inches in diameter Center of Doily is worked after Wreath of Flower Motifs are completed. 
 <br><b>Flower Motif:</b> With Shaded Yellows or Pink Spangle, chain (ch) 8, join to form a ring, ch 7, * double crochet (dc) in ring, ch 3, repeat from * 6 times, join in 4th stitch (st) of ch (8 spaces) . 
 <br><b>2nd Round:</b> * Single crochet (sc) in next loop, short double crochet (sdc) in same space (sdc: thread over hook, insert in st; pull loop through, thread over and work off all loops at one time) , 1 dc, 1 treble crochet (trc) , 1 dc, 1 sdc, 1 sc in same space (1 petal completed) , repeat from * all around, join with a slip stitch (sl st) in 1st sc. 
 <br><b>3rd Round:</b> * Ch 5, sl st between next 2 petals, repeat from * all around, ch 5, join in 1st sl st. 
@@ -56,20 +48,8 @@
 <br><b>30th Round:</b> ** Sc in next loop, * ch 5, sl st in 3rd st from hook for picot, repeat from * once, ch 2, skip next loop, repeat from ** all around ending to correspond, join in 1st sc. 
 <br><b>31st Round:</b> Sl st to center of next loop between picots, * ch 5, sl st in 3rd st from hook for picot, ch 5, sl st in 3rd st from hook for picot, ch 2, sc in center of next loop between picots, repeat from * all around ending to correspond, join in sl st at center of 1st loop, do not cut thread. 
 <br><b>Joining</b> Join Wreath to center of doily as follows: sl st to center of next loop between picots of doily, ** ch 3, 4 dc cluster st in next 4 picots (4 dc cluster st: keeping last loop of each dc on hook, 1 dc in 8th and 9th picot of any flower, 1 dc in 1st and 2nd picot of next flower, thread over and pull through all loops at one time) , * ch 3, join in next picot of same flower, ch 5, join in center st between picots of next loop of doily, repeat from * 4 times, repeat from ** all around ending to correspond, ch 3, join, cut thread. Weave in all ends. Press lightly. Starch if necessary. 
-
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 </font> 
 </td></tr></table></center>
