--- a/floral/bright.html
+++ b/floral/bright.html
@@ -2,19 +2,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Free Crochet Pattern - Bright Bouquet Doily </title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1LtpuaSbfGLo5j6UiqJrotPN57efNj6WI&export=download&export=download"><img src="images/bright.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Free Crochet Bright Bouquet Doily Pattern</b></font><br><br>
-<font face="verdana" size="2"><b>MATERIALS:</b>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Bright Bouquet Doily</span></font><br><br>
+<font face="verdana" size="2"><b>MATERIALS:</b><br>
 J. & P. COATS "KNIT-CRO-SHEEN," Art. A. 64: 1 ball of No. 1 White and 2 balls of No. 15-A Shaded Dk. Pinks. <br>
 Milwards Steel Crochet Hook No. 7. 
 <br>Doily measures 19 1/2 inches in diameter. 
@@ -47,18 +38,7 @@ Milwards Steel Crochet Hook No. 7.
 <br><b>2nd rnd:</b> Make 2 joined scallops, joining them to First Motif, 5 scallops and 5 joined scallops, joining them to previous motif and Doily as before. Join, break off and fasten. Press. 
 
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 
 <br><br>
 
