--- a/floral/calla.html
+++ b/floral/calla.html
@@ -1,38 +1,14 @@
-
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-
-<html>
-
-<head>
-
-<title>Free Calla Lily Crochet Doily Pattern</title>
-
+<html><head><title>Free Calla Lily Crochet Doily Pattern</title>
 <meta name="Description" content="Here is a free calla lily crochet doily pattern.  A beautiful doily that would look lovely in any room in your home. It's made with crochet cotton. ">
-
 <meta name="Keywords" content="free, crochet, doily, calla, calla lily, free crochet">
-<script data-ad-client="ca-pub-7162871844388187" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
-
 <body>
 <center>
-<table width="90%" height="100%" border="0" cellpadding="50" bgcolor="white"><tr><td>
-<br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-
-<p align="right">
-<a href="https://drive.google.com/uc?id=1rS-jdoYwmAgM_-SFCp_UHdnSvFKxPHGg&export=download"><img src="images/calla.jpg" align="right" width="400" height="420"></a>
-</p></center>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Calla Lily Doily Pattern</b></font><br><br>
-<font face="verdana" size="2"><b>MATERIALS:</b>
+<table width="90%" height="100%" border="0" bgcolor="white" cellpadding="5"><tr><td>
+<p align="right"><a href="https://drive.google.com/uc?id=1rS-jdoYwmAgM_-SFCp_UHdnSvFKxPHGg&export=download"><img src="images/calla.jpg" align="right" width="400" height="420"></a></p>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Calla Lily Doily</span></font><br><br>
+<font face="verdana" size="2"><b>MATERIALS:</b><br>
 Lily SKYTONE MERCERIZED CROCHET COTTON, Art. 123: 1 1/3-balls Emerald Green and 1/2-ball White; and DAISY MERCERIZED CROCHET COTTON, Art. 65, size 20: 1 1/3-skeins Emerald Green 1-skein White 1/3-skein Yellow. Steel crochet hooks Nos. 7 and 12. 
 <br><b>LARGE DOILY</b> (Size - 18 inches)-Cala Lily-Starting at center with White SKYTONE and No. 7 hook, ch 2, 7 sc 2nd ch from hook, join with sl st in back lp of 1st sc. 
 <br><b>2d rnd:</b> Ch 3, 2 dc in same place as sl st, (3 dc in back lp of next sc) 6 times, join with sl st to top of ch-3.
@@ -74,20 +50,7 @@ Lily SKYTONE MERCERIZED CROCHET COTTON, Art. 123: 1 1/3-balls Emerald Green and 
 <br><b>ROW 7:</b> Ch 1, turn, sk 1 sc, sc in next 2 sc. 
 <br><b>ROW</b> 8-Ch 1, turn, sk 1 sc, sc in last sc. Cut 8 inches long, thread to a needle, roll lengthwise and sew edges tog. down back. Make one for each Lily. Stretch and pin doilies right-side down in true circles. Steam and press dry thru a cloth. 
 <br><br>
-
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- crochet stuff -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5410888958"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-
-<br><br>
-
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 
 <br><br>
 </font></td></tr></table></center>
