--- a/floral/comos.html
+++ b/floral/comos.html
@@ -2,19 +2,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Free Crochet Pattern - Cosmos Doily </title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1iSn-5EkypGlJ4HkG3_CEZ9pd3mWKbdDp&export=download"><img src="images/comos.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Free Crochet Cosmos Doily Pattern</b></font><br><br>
-<font face="verdana" size="2"><b>MATERIALS:</b>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Comos Doily</span></font><br><br>
+<font face="verdana" size="2"><b>MATERIALS:</b><br>
 Materials Required: AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40 2 balls White 1 ball Tinted Pinks and Yellows or colors of your choice or The Famous "PURITAN" STAR SPANGLED MERCERIZED CROCHET COTTON, Article 40 5 balls Gold Spangle 2 balls Pink Spangle Steel Crochet Hook No. 7 App. size: 18" in diameter for "PURITAN", 20" in diameter for "PURITAN" STAR SPANGLED 
 <br><b>1st ROUND:</b> With Tinted Pinks and Yellows or Pink Spangle * ch 5, sl st in 5th st from hook for picot, repeat from * 7 times, join, sl st to 1st picot. 
 <br><b>2nd ROUND:</b> Ch 4, * thread over hook twice, insert in same picot, pull through and work off 2 loops twice, repeat from twice, thread over and pull through all loops at one time (petal), ch 4, sc in same picot, ch 2, sc  in next picot, repeat from beginning until there are 8 petals, ch 2, join, cut thread. 
@@ -43,18 +34,7 @@ Materials Required: AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROC
 <br><b>3rd ROUND:</b> Sl st to 1st dc, ch 3, 1 dc in each of next 2 dc, 2 trc, ch 5, 2 trc in next loop, 1 dc in each of next 3 dc, ch 4, skip 1 loop, sc in next loop, ch 4, 1 dc in each of the next 3 dc, 2 trc, ch 5, 2 trc in next loop, 1 dc in each of the next 3 dc, Ch 4, skip 1 loop, sc in next loop, ch 4, skip 1 loop, 1 dc in each of the next 3 dc, 2 trc, ch 5, 2 trc in next loop, 1 dc in each of the next 3 dc, ch 4, thread over hook, skip 1 loop, insert hook in next loop, pull through 2 loops, thread over hook, insert hook in next loop, thread over and work off all loops at one time, ch 4, 1 dc in each of the next 3 dc andcontinue all around in same manner, join. 
 <br><b>4th ROUND:</b> Sl st to 1st trc, * ch 3, trc in same space, 2 trc in next trc, sc in next loop, ch 5, sl st in 5th st from hook for picot, sc in same loop, 2 trc in next trc, 1 trc in next trc, ch 3, sl st in same trc, sl st to last dc, ch 4, sl st across next 3 dc, sl st to trc, repeat From * all around ending in some manner, join, cut thread. 
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 </font> 
 </td></tr></table></center>
