--- a/floral/dahlia.html
+++ b/floral/dahlia.html
@@ -2,23 +2,14 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Free Crochet Pattern - Dahlia Doily </title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1NSxTLmGOcRTe1hmn4oa7SQTr_5qEmcxS&export=download"><img src="images/dahlia.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Free Crochet Dahlia Doily Pattern</b></font><br><br>
-<font face="verdana" size="2"><b>MATERIALS:</b>
-DAISY MERCERIZED CROCHET COTTON, Art. 65: 1 skein White, Size 20; <br>or <br>LILY MERCROCHET MERCERIZED CROCHET COTTON, Art. 161: 1 ball White, Size 20.<br> 
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Dahlia Doily</span></font><br><br>
+<font face="verdana" size="2"><b>MATERIALS:</b><br>
+DAISY MERCERIZED CROCHET COTTON, Art. 65: 1 skein White, Size 20; <br>or <br>LILY MERCROCHET MERCERIZED CROCHET COTTON, Art. 161: 1 ball White, Size 20. 
 <br>No. 13 Steel Crochet Hook. 
 <br>SIZE - 14 inches. Work tightly for best results. 
-<br><br>Starting in center, ch 10, join with sl st to form ring. 
+<br><b>Starting</b> in center, ch 10, join with sl st to form ring. 
 <br><b>1st rnd:</b> Ch 1, 16 sc in ring, join to 1st sc. 
 <br><b>2nd rnd:</b> Ch 10, sk 1 sc, dc in next sc, (ch 7, sk 1 sc, dc in next sc) 6 times, ch 3, join with dc in 3d st of ch-10. 
 <br><b>3rd rnd:</b> 7 dc in same st, sc in next ch-7 sp, (7 dc in back lp of next dc, sc in next sp) 7 times. 
@@ -37,18 +28,7 @@ DAISY MERCERIZED CROCHET COTTON, Art. 65: 1 skein White, Size 20; <br>or <br>LIL
 <br><b>2nd rnd:</b> In each ch-23 lp make 8 sc, ch 10, sl st in last sc for a p, (5 sc, ch-10 p) twice and 8 sc. In each ch-15 lp make 9 sc, ch-10 p and 9 sc. Join and fasten off. 
 <br>Stretch and pin doily right-side-down in a true circle. Steam and press dry thru a doubled cloth.  
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 </font> 
 </td></tr></table></center>
