--- a/floral/daisyweb.html
+++ b/floral/daisyweb.html
@@ -2,18 +2,9 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Daisy Web Doily - Free Crochet Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=19-YgTRiFXYCNnYZ6y5HvWO35J3Ta-25S&export=download&export=download"><img src="images/daisyweb.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Daisy Web Doily - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Daisy Web Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
  
 Colors= Green, Yellow and White.  Size 10 or 20, It will measure about 16 to 20 inches in diameter depending on your hook size and crochet cotton. Steel Hook size 10 or 11.
@@ -52,7 +43,7 @@ Colors= Green, Yellow and White.  Size 10 or 20, It will measure about 16 to 20 
 <br><b>26th rnd:</b> Ch 4, 2 tr in same place as sl st, 3 tr in each of next 3 tr, * ch 7, skip next sp, shell over shell, ch 7, 3 tr in each of next 4 tr. Repeat from * around. Join. 
 <br><b>27th rnd:</b> Ch 4, tr in next 11 tr, * ch 7, skip next sp, shell over shell, ch 7, tr in next 12 tr. Repeat from * around. Join. 
 <br><b>28th rnd:</b> Ch 4, tr in next 11 tr, * ch 8, skip next sp, shell over shell, ch 8, tr in next 12 tr. Repeat from * around. Join. 
-<br><b>29th rnd:</b> Ch 4, tr in next 9 tr, dec 1 tr—to dec 1 tr, work off 2 tr as 1 tr—* ch 10, skip next sp, shell over shell, ch 10, dec 1 tr, tr in next 8 tr, dec 1 tr. Repeat from * around. Join to first tr.
+<br><b>29th rnd:</b> Ch 4, tr in next 9 tr, dec 1 trâ€”to dec 1 tr, work off 2 tr as 1 trâ€”* ch 10, skip next sp, shell over shell, ch 10, dec 1 tr, tr in next 8 tr, dec 1 tr. Repeat from * around. Join to first tr.
 <br><b>30th rnd:</b> Ch 4, dec 1 tr, * tr in next 4 tr, work off 3 tr as 1 tr (2 tr decreased), ch 13, skip next sp, shell over shell, ch 13, dec 2 tr. Repeat from * around. Join to first tr. 
 <br><b>POINTS</b> Ch 4, holding back on hook the last loop of each tr, make tr in next 5 tr, thread over and draw through all loops on hook (cluster made). Break off. Attach thread to first tr of next tr group and complete a cluster as before. Make a cluster in each remaining tr-group. 
 <br><b>SMALL FLOWER</b> (Make 8) . . . Work as for Large Flower until 5 rnds are completed. <br><b>FIRST PETAL . . . 1st row:</b> 3 sc in same place as sl st. Ch 1, turn. Complete as for Small Petal. 
@@ -60,18 +51,7 @@ Colors= Green, Yellow and White.  Size 10 or 20, It will measure about 16 to 20 
 
 
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
