--- a/floral/etoile.html
+++ b/floral/etoile.html
@@ -2,22 +2,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Free Crochet Pattern - "L'Etoile" Doily set  </title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1P-dxhPAwdx3eaDtQLdQSl7PPeE0HrfdV&export=download"><img src="images/etoile.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>"L'Etoile" Doily set Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">L'Etoile Doily Set</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-This set consists of 3 Doilies, approx. 14 inches, 10 inches and 8 inches. MATERIALS — D•M•C Crochet Superba, Art. 163; Size 30, White, Ecru or Ivory, 2 balls (A) and Rainbow No. 109 (or Shaded Colors) 2 balls (B). <br>Steel Crochet Hook, Size 13. 
+ <br>This set consists of 3 Doilies, approx. 14 inches, 10 inches and 8 inches. MATERIALS â€” Dâ€¢Mâ€¢C Crochet Superba, Art. 163; Size 30, White, Ecru or Ivory, 2 balls (A) and Rainbow No. 109 (or Shaded Colors) 2 balls (B). <br>Steel Crochet Hook, Size 13. 
 <br><b>Note (1): </b> Petal Group ** Ch 5, yo twice, draw up a loop in 5th ch from hook, yo, thru 2 loops, yo, thru 2 loops, * yo twice, draw up a loop in same ch just used, yo, thru 2 loops, yo, thru 2 loops * ; repeat from  * once, yo, thru all 4 loops on hook, ** ch 1 (Eye); Repeat from ** once, ch 1. 
-<br><b> NOTE(2):</b>  Large-petal Group—** ch 6, yo 3 times, draw up a loop in 6th ch from hook, yo, thru 2 loops, yo, thru 2 loops, yo, thru 2 loops, * yo 3 times, draw up a loop in same ch just used, yo, thru 2 loops, yo, thru 2 loops, yo, thru 2 loops, * ; rpt between * once, yo, thru all 4 loops on hook **, ch 1 (Eye); rpt between ** once, ch 1. 
+<br><b> NOTE(2):</b>  Large-petal Groupâ€”** ch 6, yo 3 times, draw up a loop in 6th ch from hook, yo, thru 2 loops, yo, thru 2 loops, yo, thru 2 loops, * yo 3 times, draw up a loop in same ch just used, yo, thru 2 loops, yo, thru 2 loops, yo, thru 2 loops, * ; rpt between * once, yo, thru all 4 loops on hook **, ch 1 (Eye); rpt between ** once, ch 1. 
 <br><b>14-in. DOILY (Work all rnds from right side)<br><br>Center-Rnd 1:</b> With Color A make a loop on hook, ch 6, 1 dc in 6th ch from hook, ch 2, work [1 dc, ch 2] 4 times in same ch just used, join (with slip st) in 3rd ch of ch-6; (6 sps in rnd). 
 <br><b>Rnd 2:</b>Ch 1, 1 sc in joined st, * [ch 13, 1 sc, ch 13, 1 sc] in next sp, ch 13, 1 sc in next dc; rpt from * around, in last rpt (repeat) omit last sc, join (in first sc); (18 Loops in rnd), fasten off. 
 <br><b>Rnd 3:</b> 1 sc in any Loop, [ch 3, 1 sc] in each remaining Loop, ch 3, join. 
@@ -50,19 +41,7 @@ stem, fasten off. Make 11 more Round Motifs. Tack together into a ring around Ce
 <br><b>Rnds 9 and 10:</b> Rpt rnd 5 of 14-in. Doily only work 1 sc in each of 4 sc instead of in each of 2 sc. Rpt rnds 7 and 8 of 14-in. Doily (24 Petal-Groups). Center should measure 4 1/2 inches, fasten off. Make 8 Round Motifs as for 14-in. Doily. Tack together into a ring around Center as in picture. 8-in. DOILY-Center-Work to end of rnd 7 of 14-in. Doily. Center should measure 2 1/2 inches, fasten off. 
 Make 6 Round Motifs as for 14-in. Doily. Tack together into a ring around Center as in picture. Block or press.
 <br><br> 
-
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 </font> 
 </td></tr></table></center>
