--- a/floral/flower_ruffle.html
+++ b/floral/flower_ruffle.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Flower Ruffle Doily - Free Crochet Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1HEY8j7IDT4PEtLMtE8wP_WV4fiTMdm6m&export=download&export=download"><img src="images/flower_ruffle.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Flower Ruffle Doily - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Flower Ruffle Doily</span></font><br><br><b></b>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40 2 balls Shaded Lavender 1 ball each Kelly Green, White and Shaded Yellows Approximate size: 14 inches x 20 inches or The Famous "PURITAN" STAR SPANGLED MERCERIZED CROCHET COTTON, Article 40 2 balls Purples and Silver Spangle 1 ball each Green Spangle and Yellow Spangle 2 balls Silver Spangle or colors of your choice Approximate size: 15 1/2 inches x 22 inches. Steel crochet 
+ <br>AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40 2 balls Shaded Lavender 1 ball each Kelly Green, White and Shaded Yellows Approximate size: 14 inches x 20 inches or The Famous "PURITAN" STAR SPANGLED MERCERIZED CROCHET COTTON, Article 40 2 balls Purples and Silver Spangle 1 ball each Green Spangle and Yellow Spangle 2 balls Silver Spangle or colors of your choice Approximate size: 15 1/2 inches x 22 inches. Steel crochet 
 hook No. 7 
 <br><b>Flower:</b> With Green chain (ch) 10, join to form a ring, ch 1 and work 20 single crochet (sc) in ring, join in 1st sc. 
 <br><b> 2nd Row:</b> Ch 4, double crochet (dc) in next sc, * ch 1, dc in next sc, repeat from * all around, ch 1, join in 3rd stitch (st) of chain, cut thread. 
@@ -46,18 +37,7 @@ hook No. 7
 
 
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
