--- a/floral/flu.html
+++ b/floral/flu.html
@@ -2,21 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Ruffles and Flourishes Doily - Free Crochet Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1P9OPBYcEZXgLdr24JRjgKEon5cMG00n1&export=download&export=download"><img src="images/flu.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Ruffles and Flourishes Doily - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Ruffles and Flourishes Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-
-DAISY Mercerized Crochet Cotton, size 30:-4 skeins or balls each White, Shd. 
+ <br>DAISY Mercerized Crochet Cotton, size 30:-4 skeins or balls each White, Shd. 
 Peaches and Shd. Greens (sufficient for Centerpiece and 4 Place settings). Crochet hook No. 13. 
 CENTERPIECE-(Size 18")
 <br><b>ROW 1: </b>With White ch 12, join with sl st to form ring. ch 1, sc in ring, (ch 5, sc in ring) 11 times, ch 2, join with dc in 1st sc. <br><b>ROW 2:</b> Ch 8, dc in next lp, (ch 5, dc in next lp) 10 times, ch 5, join with sl st in 3d st of ch-8. 
@@ -58,7 +48,7 @@ ROW 16 twice (thru ROW 21).
 <br><b>NEXT ROW:</b> Repeat Row 25 except make ch-12 between all groups. 
 <br><b>NEXT ROW:</b> Join White, ch 7, dtr in next 5 dtr, * ch 6, dtr in next ch-12 lp, ch 6, dtr in next p, ch 6, dtr in next lp, ch 6, dtr in next 6 dtr. Repeat from * around, join. 
 <br><b>NEXT ROW:</b> Ch 1, sc in same st, sc in next 5 dtr, * (6 sc in next lp, sc in next dtr) 3 times, 6 sc in next lp, sc in next 6 dtr. Repeat from * around, join. Repeat Frill. Make 12 Flowers and sew on as for Centerpiece. 
-<br><b>Glass DOILY</b>—(Size 6 1/2 inches)—(Make 4)—Repeat Rows 1 & 2. Fasten off. 
+<br><b>Glass DOILY</b>â€”(Size 6 1/2 inches)â€”(Make 4)â€”Repeat Rows 1 & 2. Fasten off. 
 <br><b>ROW 3:</b> Join Shd. Greens to one dc, ch 7, * (6 tr in center ch of next ch-5 lp) twice, ch 2, tr in next dc, ch 2 and repeat from * around, join to 5th ch of ch-7. 
 <br><b>ROW 4:</b> Repeat Row 23. 
 <br><b>ROW 5:</b> Repeat Row 24 except make ch-8 between all groups. 
@@ -67,18 +57,7 @@ ROW 16 twice (thru ROW 21).
 <br><b>ROW 8:</b> Ch 1, sc in same st, sc in next 5 dtr, 9 sc in each ch-8 lp and sc in each dtr around. Join. Repeat Frill. Make 6 Flowers and sew on as for Centerpiece. Starch lightly, press partly dry, then stretch and pin right-side-up and leave until dry. Arrange Frills in even rlpples as starch dries. 
 
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
