--- a/floral/forget_crochet.html
+++ b/floral/forget_crochet.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Free Crochet Pattern - Forget Me Not Doily  </title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=179U31Lta2OptDuLEdO38gk7_XrLqw_bW&export=download"><img src="images/forget.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Forget Me Not Doily - Free Crochet Pattern</b></font><br><br>
-<font face="Times New Roman" size="2"><br><b>MATERIALS:</b><br> 
- Size #10 crochet cotton any brand, any color. The pattern calls for blue however you could use pinks, reds, purples, yellows anything you want. If you use the size 10 crochet cotton your doily will measure around 14 inches in diameter with a size 10 hook. 
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Forget Me Not Doily</span></font><br><br>
+<font face="Times New Roman" size="2"><b>MATERIALS:</b>
+ <br> Size #10 crochet cotton any brand, any color. The pattern calls for blue however you could use pinks, reds, purples, yellows anything you want. If you use the size 10 crochet cotton your doily will measure around 14 inches in diameter with a size 10 hook. 
 <b><br>1st Row:</b>With White ch 8, join to form a ring, ch 1 and work 12 sc in ring, join. 
 <br><b>2nd Row:</b> Ch 5, dc in next sc, * ch 2, dc in next sc, repeat from * all around, ch 2, join in 3rd st of ch. 
 <br><b>3rd Row:</b> Ch 1 and work 3 sc over each loop, join. 
@@ -40,19 +31,8 @@ correspond, ch 3, join.
 <br><b>2nd Flower:</b> Work center same as 1st flower. Attach Shaded Blues in loop, ch 4, 2 tr c in same space, ch 3, sl st in center st of side petal of previous flower, ch 3, turn, sl st in top of trc just made, trc in same space, ch 4, sl st in same space, sl st in next loop of center and join next 2 petals 
 to previous row of flowers same as 1st flower, then complete remaining petals of flower same as 1st flower. Work 22 more flowers and join same as 2nd flower joining the side petal of last flower made to side petal of 1st flower. 
 <br><br>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-
-</font> 
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
+<br><br></font> 
 </td></tr></table></center>
 </body></html>
 
