--- a/floral/gift.html
+++ b/floral/gift.html
@@ -2,21 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Gift Christmas Doily - Free Crochet  Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1QT-oBVpWYB0hmYGPMHQRT0Mzsupgag1V&export=download&export=download"><img src="images/gift.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Gift Doily - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Gift Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-
-AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40 1 ball each White, Kelly Green, and Yellow or THE famous "PURITAN" STAR SPANGLED MERCERIZED CROCHET COTTON, Article 40 1 ball each Silver Spangle, Green Spangle and Red Spangle or colors of your choice Steel Crochet Hook No. 7 App. size: 9 inches in diameter for "PURITAN"; 10 inches in diameter for "PURITAN" Star Spangled.
+ <br>AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40 1 ball each White, Kelly Green, and Yellow or THE famous "PURITAN" STAR SPANGLED MERCERIZED CROCHET COTTON, Article 40 1 ball each Silver Spangle, Green Spangle and Red Spangle or colors of your choice Steel Crochet Hook No. 7 App. size: 9 inches in diameter for "PURITAN"; 10 inches in diameter for "PURITAN" Star Spangled.
 <br><b>LEAVES:</b> With Green or Green Spangle chain (ch) 7, slip stitch (sl st) in 4th st from hook for picot, 2 double crochet (dc) in 1st st of ch, ch 3, turn. 
 <br><b>2nd ROW:</b> Sl st in 1st dc for picot, sl st in next dc, ch 7, sl st in 4th st from hook for picot, 4 treble crochet (trc) in same dc, ch. 3, turn. 
 <br><b>3rd ROW:</b> Sl st in 1st trc, ch 3, trc in next trc, ch 3, sl st in top of trc, ch 3, sl st over side of trc, ch 3, sl st in base of same trc, cut thread. With wrong side of 1st row toward you, attach Green in base of 1st row, ch 6, sl st in 4th st from hook, 2 dc in base of same row, ch 3, turn. Repeat the 2nd and 3rd rows once, cut thread. Work 23 more Leaves in same manner. Sew Leaves together at base in groups of 2 having 1 leaf on right side and 1 leaf on wrong side for uniform shape. 
@@ -34,23 +24,9 @@ AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 
 <br><b>11 th ROUND:</b> Sl st to next loop, ch 1, sc in same space, * ch 7, 1 trc, ch 3, 1 trc in next loop, * ch 7, sc at end of next loop, ch 3, sc at beginning of next loop, repeat from * all around ending to correspond, join in 1st sc. 
 <br><b>12th ROUND:</b> Sl st into loop, ch 1, sc in same space, * ch 5, trc in next trc, ch 3, 1 trc, ch 3, 1 trc in next loop, ch 3, trc in next trc, ch 5, sc at end of next loop, ch 3, sc in next loop, ch 3, sc at beginning of next loop, repeat from * all around ending to correspond, join in 1st sc. 
 <br><b>13th ROUND:</b> Sl st into loop, ch 1, sc in same space, * ch 4, dc in next trc, ch 1, drop loop from hook, insert hook in 1st picot from starting point of left hand leaf of group of leaves, pull loop through, ch 1, sl st in same dc of doily, ch 3, trc in next trc, ch 1, join to next picot of same leaf, ch 1, sl st in same trc, ch 3, trc in next loop, ch 5, sl st in 4th st from hook, ch 1, trc in same loop, ch 3, trc in next trc, ch 1, join to 1st picot from top of right hand leaf of next group of leaves, ch 1, sl st in same trc of doily, ch 3, dc in next trc, ch 1, join to next picot of same Leaf, ch 1, sl st in same dc, ch 4, sc in next loop, ch 3, sc in next loop, ch 4, join in joining of leaves, ch 4, sc in next loop, ch 3, sc in next loop, repeat from * all around ending to correspond, join, cut thread. Sew Berries to base of Leaves as in picture. 
-
-
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-<br><br>
-
 </font> 
 </td></tr></table></center>
 </body></html>
