--- a/floral/grape.html
+++ b/floral/grape.html
@@ -2,191 +2,33 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Grape Doily - Free Crochet Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1nzhuNtKOQED5pSEX5FSjDeLbTVZFAuv6&export=download&export=download"><img src="images/grape.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Grape Doily - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Grape Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-  You can use any colors you wish. The grapes use about 500 yards of crochet cotton#10. The white is about 200 yards and the green about 400 yards. I used a  Steel Crochet Hook No. 7. The doily measures 14 inches in diameter. <br><br>
-
+ <br>You can use any colors you wish. The grapes use about 500 yards of crochet cotton#10. The white is about 200 yards and the green about 400 yards. I used a  Steel Crochet Hook No. 7. The doily measures 14 inches in diameter. <br><br>
 <b>Note:</b> I changed the grape instructions from dc's to trc's. Your grapes will come out much better. 
-
-<br><b>1st rnd:</b> Starting at center with White, ch 10, join with sl st to form ring. Ch 5, (dc in ring, ch 
-
-
-
-2) 15 times; join to 3rd ch of ch-5 (16 sps). 
-
-<br><b>2nd rnd:</b> Sl st in next sp, ch 3, dc in same sp, * ch 2, 2 dc in next sp. Repeat from * around. 
-
-
-
-join last ch-2 to top of ch-3. 
-
-<br><b>3rd rnd:</b> Sl st in next sp, ch 3, in same sp make dc, ch 3 and 2 dc; * in next sp make 2 dc, ch 
-
-
-
-3 and 2 dc (shell made). Repeat from * around. join. 
-
-<br><b>4th and 5th rnds:</b> Sl st to sp of next shell, ch 3, in same shell make 2 dc, ch 3 and 3 dc; * in sp 
-
-
-
-of next shell make 3 dc, ch 3 and 3 dc. Repeat from * around. Join. 
-
-<br><b>6th and 7th rnds:</b> Sl st to sp of next shell, ch 3, in same shell make 3 dc, ch 3 and 4 dc; * in 
-
-
-
-next sp make 4 ch 3 and 4 dc. Repeat from * around. join. 
-
-<br><b>8th rnd:</b> Sl st to sp of next shell, ch 3, in same shell make 3 dc, ch 3 and 4 dc; * ch 2, dc in 
-
-
-
-first dc of next shell, ch 2, in sp of next shell make 4 dc, ch 3 and 4 dc. Repeat from * around. join. 
-
-<br><b>9th rnd:</b> Sl st to sp of next shell, ch 3, in same sp make 4 dc, ch 3 and 5 dc; * ch 2, skip next 
-
-
-
-sp, dc in next dc, ch 2, in sp of next shell make 5 dc, ch 3 and 5 dc. Repeat from * around. join and break off. 
-
-
-
-<br><b>10th rnd:</b> Attach Killarney to sp of any shell, ch 4, in same sp make 4 tr, ch 3 and 5 tr; * ch 5, 
-
-
-
-in sp of next shell make (tr, ch 2) 9 times and tr (9 sps); ch 5, in sp of next shell make 5 dc, ch 3 and 5 dc. 
-
-
-
-Repeat from * around. join and break off. 
-
-<br><b>GRAPES<br>1st row:</b> Attach Shaded Purples to first sp of any 9-sp group, ch 3, in same sp 
-
-
-
-make 9 trc, drop loop from hook, insert hook in top of first st of this group, draw dropped loop through (pc st 
-
-
-
-made): * ch 2, make 10 trc in next sp, insert hook in first dc of group and complete pc st. Repeat from * 
-
-
-
-across remaining 7 sps. Ch 3, turn. 
-
-<br><b>2nd row:</b> 9 trc in first ch-2 sp, drop loop from hook, insert hook in top of ch-3 from back to 
-
-
-
-front, draw dropped loop through (inverted pc st * ch 2, 10 dc in next sp, complete an inverted pc st. Repeat 
-
-
-
-from * across each remaining sp. Ch 3. turn (8 pc sts). Continue working rows of pc sts, having 1 less pc st 
-
-
-
-on each row, until 1 pc st remains. Break off. Make a bunch of grapes the same way over each group of sps. 
-
-
-
-<br><b>LEAVES <br>1st row:</b> Attach Killarney to tip of last pc st made on first row of any set of 
-
-
-
-grapes, ch 5, in sp of shell make 4 tr, ch 3 and 4 tr (shell made); ch 5, sl st in tip of first pc st on first row of 
-
-
-
-next set of grapes, ch 3, sl st in tip of pc st on next row. Ch 5, turn. 
-
-<br><b>2nd and 3rd rows:</b> Make shell in sp of shell, ch sl st in tip of pc st on next row of grapes, ch 3, 
-
-
-
-sl st in tip of pc st on following row. Ch 5, turn. 
-
-<br><b>4th row:</b> 4 tr in sp of shell, ch 3, in same sp make (3 tr, ch 3) twice and 4 tr; ch 5, sl st in tip 
-
-
-
-of next pc st, ch 3, sl st in tip of pc st on next row. Ch 5, turn. 
-
-<br><b>5th row:</b> Shell in sp of first shell, ch 3, sc in next sp, th 3, shell in next sp, ch 5, sl st in tip of 
-
-
-
-next pc st, ch 3, sl st in tip of pc st on next row. Ch 5, turn. 
-
-<br><b>6th row:</b> Shell in first shell, (ch 3, sc in next sp) twice; ch 3, shell in sp of next shell, ch 5, sl st 
-
-
-
-in tip of next pc st, ch 3, sl st in tip of pc st on next row. Ch 5, turn. 
-
-<br><b>7th row:</b> Shell in sp of next shell, ch 3, sc in next sp, ch 3, shell in next loop, ch 3, sc in next 
-
-
-
-sp, ch 3, shell in sp of next shell, ch 5, sl st in tip of next pc st, ch 3, sl st in tip of pc st on next row. Ch 5, 
-
-
-
-turn. 
-
-<br><b>8th row:</b> Shell in sp of next shell, (ch 3, sc in next sp) twice; ch 3, shell in sp of next shell, (ch 
-
-
-
-3, sc in next sp) twice; ch 3, shell in sp of next shell, ch 5, sl st in tip of next pc st, ch 3, sl st in tip of pc st on 
-
-
-
-next row. Ch 5, turn. 
-
-<br><b>9th row:</b> * Tr in sp of next shell, ch 3, sl st in tr just made (picot made), in same sp make (2 
-
-
-
-tr, picot) 4 times; (ch 3, sc in next sp, picot) 3 times; ch 3. Repeat from * once more; in next sp make tr, 
-
-
-
-picot, (2 tr, picot) 4 times; ch 5, sl St in tip of top pc St. Break off. Work other leaves the same way. Starch 
-
-
-
-lightly and press. 
-
-
+<br><b>1st rnd:</b> Starting at center with White, ch 10, join with sl st to form ring. Ch 5, (dc in ring, ch 2) 15 times; join to 3rd ch of ch-5 (16 sps). 
+<br><b>2nd rnd:</b> Sl st in next sp, ch 3, dc in same sp, * ch 2, 2 dc in next sp. Repeat from * around. in last ch-2 to top of ch-3. 
+<br><b>3rd rnd:</b> Sl st in next sp, ch 3, in same sp make dc, ch 3 and 2 dc; * in next sp make 2 dc, ch 3 and 2 dc (shell made). Repeat from * around. join. 
+<br><b>4th and 5th rnds:</b> Sl st to sp of next shell, ch 3, in same shell make 2 dc, ch 3 and 3 dc; * in sp of next shell make 3 dc, ch 3 and 3 dc. Repeat from * around. Join. 
+<br><b>6th and 7th rnds:</b> Sl st to sp of next shell, ch 3, in same shell make 3 dc, ch 3 and 4 dc; * in next sp make 4 ch 3 and 4 dc. Repeat from * around. join. 
+<br><b>8th rnd:</b> Sl st to sp of next shell, ch 3, in same shell make 3 dc, ch 3 and 4 dc; * ch 2, dc in first dc of next shell, ch 2, in sp of next shell make 4 dc, ch 3 and 4 dc. Repeat from * around. join. 
+<br><b>9th rnd:</b> Sl st to sp of next shell, ch 3, in same sp make 4 dc, ch 3 and 5 dc; * ch 2, skip next sp, dc in next dc, ch 2, in sp of next shell make 5 dc, ch 3 and 5 dc. Repeat from * around. join and break off. 
+<br><b>10th rnd:</b> Attach Killarney to sp of any shell, ch 4, in same sp make 4 tr, ch 3 and 5 tr; * ch 5, in sp of next shell make (tr, ch 2) 9 times and tr (9 sps); ch 5, in sp of next shell make 5 dc, ch 3 and 5 dc. Repeat from * around. join and break off. 
+<br><b>GRAPES<br>1st row:</b> Attach Shaded Purples to first sp of any 9-sp group, ch 3, in same sp make 9 trc, drop loop from hook, insert hook in top of first st of this group, draw dropped loop through (pc st made): * ch 2, make 10 trc in next sp, insert hook in first dc of group and complete pc st. Repeat from * across remaining 7 sps. Ch 3, turn. 
+<br><b>2nd row:</b> 9 trc in first ch-2 sp, drop loop from hook, insert hook in top of ch-3 from back to front, draw dropped loop through (inverted pc st * ch 2, 10 dc in next sp, complete an inverted pc st. Repeat from * across each remaining sp. Ch 3. turn (8 pc sts). Continue working rows of pc sts, having 1 less pc st on each row, until 1 pc st remains. Break off. Make a bunch of grapes the same way over each group of sps. 
+<br><b>LEAVES <br>1st row:</b> Attach Killarney to tip of last pc st made on first row of any set of grapes, ch 5, in sp of shell make 4 tr, ch 3 and 4 tr (shell made); ch 5, sl st in tip of first pc st on first row of next set of grapes, ch 3, sl st in tip of pc st on next row. Ch 5, turn. 
+<br><b>2nd and 3rd rows:</b> Make shell in sp of shell, ch sl st in tip of pc st on next row of grapes, ch 3, sl st in tip of pc st on following row. Ch 5, turn. 
+<br><b>4th row:</b> 4 tr in sp of shell, ch 3, in same sp make (3 tr, ch 3) twice and 4 tr; ch 5, sl st in tip of next pc st, ch 3, sl st in tip of pc st on next row. Ch 5, turn. 
+<br><b>5th row:</b> Shell in sp of first shell, ch 3, sc in next sp, th 3, shell in next sp, ch 5, sl st in tip of next pc st, ch 3, sl st in tip of pc st on next row. Ch 5, turn. 
+<br><b>6th row:</b> Shell in first shell, (ch 3, sc in next sp) twice; ch 3, shell in sp of next shell, ch 5, sl st in tip of next pc st, ch 3, sl st in tip of pc st on next row. Ch 5, turn. 
+<br><b>7th row:</b> Shell in sp of next shell, ch 3, sc in next sp, ch 3, shell in next loop, ch 3, sc in next sp, ch 3, shell in sp of next shell, ch 5, sl st in tip of next pc st, ch 3, sl st in tip of pc st on next row. Ch 5, turn. 
+<br><b>8th row:</b> Shell in sp of next shell, (ch 3, sc in next sp) twice; ch 3, shell in sp of next shell, (ch 3, sc in next sp) twice; ch 3, shell in sp of next shell, ch 5, sl st in tip of next pc st, ch 3, sl st in tip of pc st on next row. Ch 5, turn. 
+<br><b>9th row:</b> * Tr in sp of next shell, ch 3, sl st in tr just made (picot made), in same sp make (2 tr, picot) 4 times; (ch 3, sc in next sp, picot) 3 times; ch 3. Repeat from * once more; in next sp make tr, picot, (2 tr, picot) 4 times; ch 5, sl St in tip of top pc St. Break off. Work other leaves the same way. Starch lightly and press. 
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-<br><br>
-
 </font> 
 </td></tr></table></center>
 </body></html>
