--- a/floral/graped.html
+++ b/floral/graped.html
@@ -2,22 +2,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Grape Doily - Free Crochet Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1h_ykDZ0MF-qwXDSw4zE3I_eRLRazi2Wn&export=download&export=download"><img src="images/graped.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Grape Doily - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Grape Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
- J. & P. COATS "KNIT-CRO-SHEEN," Art. A.64: 1 ball each of White, No. 48 Hunter's Green and No. 49 Chartreuse Green. 2 balls of No. 18-A Shaded Purples. Milwards Steel Crochet Hook No. 7. 
-Doily measures 16 inches in diameter.<br><br>
-<b>1st rnd:</b> Starting at center with White, ch 8. Join with sl st to form ring.  Ch 3, 15 dc in ring. Join. 
+ <br> J. & P. COATS "KNIT-CRO-SHEEN," Art. A.64: 1 ball each of White, No. 48 Hunter's Green and No. 49 Chartreuse Green. 2 balls of No. 18-A Shaded Purples. Milwards Steel Crochet Hook No. 7. 
+Doily measures 16 inches in diameter.
+<br><b>1st rnd:</b> Starting at center with White, ch 8. Join with sl st to form ring.  Ch 3, 15 dc in ring. Join. 
 <br><b>2nd rnd:</b> Ch 4, 2 tr in same place as sl st, 3 tr in each dc around. Join. 
 <br><b>3rd rnd:</b> Ch 4, 4 tr in same place as sl st, * skip 2 tr, 5 tr in next tr. Repeat from * around. Join. 
 <br>4th rnd:</b> Sl st in next 2 tr, ch 4, 3 tr in same place as last sl st, * skip 4 tr, 7 tr in next tr. Repeat from * around, ending with 3 tr in same place as first 3 tr were made. Join. 
@@ -39,21 +30,8 @@ Doily measures 16 inches in diameter.<br><br>
 <br><b>6th row:</b> Skip first tr group, attach thread to center tr of next tr group, ch 4, 10 tr in same place, (ch 3, 11 tr in center tr of next tr group) twice. Break off and turn. 
 <br><b>7th row:</b> Attach thread to center tr of center tr group, ch 4, 10 tr in same place. Break off. Work other leaves between bunches of grapes the same way. Attach Hunter's Green to center tr on last White rnd at base of any leaf and, working toward edge of doily, (ch 4, sc in sp between first and 2nd tr groups on next row) 6 times. Break off. Attach thread to same place and, working toward edge of doily, ch 4, sc in sp between last and next to last tr groups on next row) 6 times. Break off. Attach thread to sp between first and 2nd groups on first row of leaf and, working over sps as before, (ch 4, sc in sp between next 2 tr groups) 6 times. Break off. Attach thread to sp between 2nd and 3rd tr groups on first row of leaf and work as before. Complete other leaves the same way. 
 <br><b>EDGING</b><br>Attach Hunter's Green to first st on first tr group on any leaf, sc in same place, ** (ch 4, sc in 3rd ch from hook picot made skip 1 tr, sc in next tr) 4 times; * ch 4, sc in first st on next group, (ch 1, picot, skip 1 tr, sc in next tr) 5 times. Repeat from * 2 more times, ch 4, sc in first St on next group, (ch 1, picot, skip 1 st, sc in next st) 4 times; sc in first free st on next leaf. Repeat from ** around. Join and break off. Starch lightly and press. 
-
-
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
