--- a/floral/laural.html
+++ b/floral/laural.html
@@ -2,26 +2,14 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Laurel Doily - Free Crochet Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1j_-mcKqNHk0Pa96htvyDcQlhDgHC-qgm&export=download&export=download"><img src="images/laurel.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Laurel Doily - Free Crochet Pattern</b></font><br><br>
-<font face="verdana" size="2"><b>MATERIALS:</b>J. & P. COATS BEST SIX CORD MERCERIZED CROCHET, Art. A.104, Size 30: 2 balls of No. 49 Char-treuse Green and 1 ball of White; or Clark's Big Ball Mercerized Crochet, Art. B.34, Size 30: 2 balls of No. 49 Chartreuse Green and 1 
-ball of White. Milwards Steel Crochet Hook No. 10. Doily measures 19 inches in diameter. 
-<br><br>
-<b>CROCHETED BRAID:</b> Starting at narrow end with Chartreuse, ch 12. 
-<br><br>
-<b>1st row:</b> Dc in the 8th ch from hook, (ch 1, skip 1 ch, dc in next ch) twice. Ch 7, turn. 
-<br><br>
-<b>2nd row:</b> Dc in first dc, (ch 1, dc in next dc) twice. Ch 7, turn. Repeat 2nd row until there are 64 loops on 
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Laurel Doily</span></font><br><br>
+<font face="verdana" size="2"><b>MATERIALS:</b>
+<br> J. & P. COATS BEST SIX CORD MERCERIZED CROCHET, Art. A.104, Size 30: 2 balls of No. 49 Char-treuse Green and 1 ball of White; or Clark's Big Ball Mercerized Crochet, Art. B.34, Size 30: 2 balls of No. 49 Chartreuse Green and 1 ball of White. Milwards Steel Crochet Hook No. 10. Doily measures 19 inches in diameter. 
+<br><b>CROCHETED BRAID:</b> Starting at narrow end with Chartreuse, ch 12. 
+<br><b>1st row:</b> Dc in the 8th ch from hook, (ch 1, skip 1 ch, dc in next ch) twice. Ch 7, turn. 
+<br><b>2nd row:</b> Dc in first dc, (ch 1, dc in next dc) twice. Ch 7, turn. Repeat 2nd row until there are 64 loops on 
 each side, ending with dc in last dc. Break off. Sew narrow ends together, being careful not to twist. Now make a 
 strip of braid, having 17 loops on each side, ch 3, sl st in first loop made (petal joining made), ch 3, turn; make 3 
 more rows of braid, ch 3, sl st through previous 2 loops on same side, ch 3, turn; continue making braid, joining 
@@ -31,36 +19,18 @@ loops on inner edge of petal). Repeat from * around, until 8 petals have been jo
 in next dc) twice; ch 3, sl st through previous loop on same side and first free loop on first petal, ch 3, turn; dc in 
 first dc, (ch 1, dc in next dc) twice. Break off. Sew last row to base of first row. Sew the first free loop on first petal 
 to the last free loop of 8th petal to correspond with previous joinings between petals. 
-<br><br>
-<b>FILL-IN-LACE:</b> Attach White to first free loop following joining on inner edge of any petal, sc in same loop, (ch 5, sc in next loop) 5 times; ch 5, sc in each of next 4 loops, (ch 2, sl st in White loop opposite, ch 2, sl st in next loop on braid) 6 times. Break off. Fill in other petals the same way. 
-<br><br>
-<b>CENTER:</b> Attach White to any joined-loop at center of piece, ch 5, dtr in next loop and in each loop around. Join to top of ch-5. Break off. Now work around outer edge of petals as follows: Attach White to first free loop on any petal, sc in same loop, * (ch 5, sc in next loop) 5 times; ch 5, in next loop make sc, ch 5 and sc; (ch 5, sc in next loop) 6 times; sc in first free loop of next petal. Repeat from * around. Join and break off. 
-<br><br>
-<b>CLUSTER GROUP:</b> Attach White to any loop on inside of braid ring made previously, ch 5, holding back on hook the last loop of each dtr make 2 dtr in same loop, thread over and draw through all loops on hook (cluster made), ch 5, in same loop make (3-dtr cluster, ch 5) twice and 3-dtr cluster. Break off. Skip next 7 loops and make another cluster group in next loop. Work in this manner around. 
-<br><br>
-<b>To Join Ring to Petals:</b> Attach White to 4th loop following any cluster group, sc in same loop, sl st in center loop at tip of any petal, * sc in same loop as last sc was made on ring, (ch 3, sc in next loop on ring, ch 3, sc in next loop on petal) twice; ch 3, sc in first sp on cluster-group, ch 3, sc in next loop on petal, ch 5, sc in next sp on cluster group, ch 5, skip next loop on petal, sc in next loop, ch 3, sc in corresponding loop on next petal, ch 5, sl st in sc made in center sp of cluster-group, ch 5, skip next loop on petal, sc in next loop, ch 3, sc in next sp on cluster-group, ch 3, sl st in next loop on petal, ch 3, skip next loop on ring, sc in next loop, ch 3, sc in next loop on petal, (ch 3, sc in next loop on ring) twice; sl st in center loop at tip of next petal. Repeat from * around, join and 
+<br><b>FILL-IN-LACE:</b> Attach White to first free loop following joining on inner edge of any petal, sc in same loop, (ch 5, sc in next loop) 5 times; ch 5, sc in each of next 4 loops, (ch 2, sl st in White loop opposite, ch 2, sl st in next loop on braid) 6 times. Break off. Fill in other petals the same way. 
+<br><b>CENTER:</b> Attach White to any joined-loop at center of piece, ch 5, dtr in next loop and in each loop around. Join to top of ch-5. Break off. Now work around outer edge of petals as follows: Attach White to first free loop on any petal, sc in same loop, * (ch 5, sc in next loop) 5 times; ch 5, in next loop make sc, ch 5 and sc; (ch 5, sc in next loop) 6 times; sc in first free loop of next petal. Repeat from * around. Join and break off. 
+<br><b>CLUSTER GROUP:</b> Attach White to any loop on inside of braid ring made previously, ch 5, holding back on hook the last loop of each dtr make 2 dtr in same loop, thread over and draw through all loops on hook (cluster made), ch 5, in same loop make (3-dtr cluster, ch 5) twice and 3-dtr cluster. Break off. Skip next 7 loops and make another cluster group in next loop. Work in this manner around. 
+<br><b>To Join Ring to Petals:</b> Attach White to 4th loop following any cluster group, sc in same loop, sl st in center loop at tip of any petal, * sc in same loop as last sc was made on ring, (ch 3, sc in next loop on ring, ch 3, sc in next loop on petal) twice; ch 3, sc in first sp on cluster-group, ch 3, sc in next loop on petal, ch 5, sc in next sp on cluster group, ch 5, skip next loop on petal, sc in next loop, ch 3, sc in corresponding loop on next petal, ch 5, sl st in sc made in center sp of cluster-group, ch 5, skip next loop on petal, sc in next loop, ch 3, sc in next sp on cluster-group, ch 3, sl st in next loop on petal, ch 3, skip next loop on ring, sc in next loop, ch 3, sc in next loop on petal, (ch 3, sc in next loop on ring) twice; sl st in center loop at tip of next petal. Repeat from * around, join and 
 break off. Now, working around outer edge of ring, attach White to any loop, sc in same loop, * ch 7, sc in next loop. Repeat from * around. Join and break off. 
-<br><br>
-<b>LEAF (Make 8)</b> Make a strip of braid, having 13 loops on each side, ch 3, skip previous 10 loops on same side, sl st in next loop, ch 3, turn; make 5 more rows of braid, ch 3, sl st through previous 3 loops on same side. Ch 3, turn. Continue making braid, joining next 3 loops on same side as group was joined to adjacent loops, continue making braid until there are 10 free loops on same side as last joining, ch 3, skip previous 12 loops, sl St in next loop, ch 3, turn; make 3 more rows of braid, ch 3, sl st through previous 2 loops. Ch 3, turn. Continue making braid, joining next 2 loops on same side as group was joined. Continue until there are 13 free loops on same side as last joining, ch 3, skip previous 15 loops, sl st in next loop. Complete other 2 points of leaf to correspond with the first 2 points, ending with the sl st to form last point, ch 3, turn; make 4 more rows of braid. Break off. Sew last row to base of first row. Work fill-in-lace as before, making an sc in each of 4 center loops on each of the 4 side points and a group of sc in center 3 loops on center point. 
-<br><br>
-<b>CENTER FILL-IN-LACE</b> Attach White to loop made on first row of braid, ch 5, sc in first free loop between first 2 side points, ch 5, sc in next free loop, ch 5, dc in each of the next 6 joined-loops, (ch 2, sl st in White loop opposite, ch 2, sc in next free loop on braid) twice; ch 2, sl st in 3rd ch of first ch-5. Break off. 
-<br><br>
-<b>Now join leaves together as follows:</b>  Attach White to the 3rd free loop following joining between the 4th and 5th points on any leaf, sc in same loop, * (ch 7, sc in next loop) 13 times; sc in the 3rd free loop on next leaf. Repeat from * around. Join and break off. 
-<br><br>
-<b>Join leaves to center as follows:</b>  Place center of leaves directly over cluster groups on center section. Attach Chartreuse to first White loop on any leaf, sc in same loop, (dh 7, sc in next loop) 3 times; ch 3, sc in 3rd loop on center section preceding loop directly over cluster group, (ch 3, sc in next loop on leaf, ch 3, sc in next loop on center) 6 times; (ch 7, sc in next loop on leaf) 3 times; sc in first loop on next leaf, ch 3, sl st in last loop made on previous leaf, ch 3, (sc in next loop on leaf, ch 7) twice; skip next loop on center, sc in next loop, (ch 3, sc in next loop on leaf, ch 3, sc in next loop on center) 6 times; ch 3, sc in next loop on leaf, (ch 7, sc in next loop) 3 times; sc in first loop on next leaf, ch 3, sl st in last loop made on previous leaf, ch 3, sc in next loop, (ch 7, sc in 
+<br><b>LEAF (Make 8)</b> Make a strip of braid, having 13 loops on each side, ch 3, skip previous 10 loops on same side, sl st in next loop, ch 3, turn; make 5 more rows of braid, ch 3, sl st through previous 3 loops on same side. Ch 3, turn. Continue making braid, joining next 3 loops on same side as group was joined to adjacent loops, continue making braid until there are 10 free loops on same side as last joining, ch 3, skip previous 12 loops, sl St in next loop, ch 3, turn; make 3 more rows of braid, ch 3, sl st through previous 2 loops. Ch 3, turn. Continue making braid, joining next 2 loops on same side as group was joined. Continue until there are 13 free loops on same side as last joining, ch 3, skip previous 15 loops, sl st in next loop. Complete other 2 points of leaf to correspond with the first 2 points, ending with the sl st to form last point, ch 3, turn; make 4 more rows of braid. Break off. Sew last row to base of first row. Work fill-in-lace as before, making an sc in each of 4 center loops on each of the 4 side points and a group of sc in center 3 loops on center point. 
+<br><b>CENTER FILL-IN-LACE</b> Attach White to loop made on first row of braid, ch 5, sc in first free loop between first 2 side points, ch 5, sc in next free loop, ch 5, dc in each of the next 6 joined-loops, (ch 2, sl st in White loop opposite, ch 2, sc in next free loop on braid) twice; ch 2, sl st in 3rd ch of first ch-5. Break off. 
+<br><b>Now join leaves together as follows:</b>  Attach White to the 3rd free loop following joining between the 4th and 5th points on any leaf, sc in same loop, * (ch 7, sc in next loop) 13 times; sc in the 3rd free loop on next leaf. Repeat from * around. Join and break off. 
+<br><b>Join leaves to center as follows:</b>  Place center of leaves directly over cluster groups on center section. Attach Chartreuse to first White loop on any leaf, sc in same loop, (dh 7, sc in next loop) 3 times; ch 3, sc in 3rd loop on center section preceding loop directly over cluster group, (ch 3, sc in next loop on leaf, ch 3, sc in next loop on center) 6 times; (ch 7, sc in next loop on leaf) 3 times; sc in first loop on next leaf, ch 3, sl st in last loop made on previous leaf, ch 3, (sc in next loop on leaf, ch 7) twice; skip next loop on center, sc in next loop, (ch 3, sc in next loop on leaf, ch 3, sc in next loop on center) 6 times; ch 3, sc in next loop on leaf, (ch 7, sc in next loop) 3 times; sc in first loop on next leaf, ch 3, sl st in last loop made on previous leaf, ch 3, sc in next loop, (ch 7, sc in 
 next loop) twice; ch 3, skip next loop on center, sc in next loop. Repeat from * around, joining last loop to first loop made. Break off. Starch lightly and press. 
 <br><br>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 </font> 
 </td></tr></table></center>
