--- a/floral/lily.html
+++ b/floral/lily.html
@@ -2,25 +2,14 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Free Crochet Calla Lily Doily</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1ukNzyAL52613qsgb2XzNe5zCoyTHT_7U&export=download"><img src="images/cala.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Calla Lily Ruffle Doily Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Calla Lily Ruffle doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-American Thread company.<br>
-The Famous "Puritan" crochet cotton, Article 40, 2 balls White
-1 ball Kelly Green and "Star" Six Strand Embroidery Cotton, Article 50
-1 skein Yellow.<br>
-Steel crochet hook No. 7<br>
-Doily Measures about 18 inches in diameter.
+<br>American Thread company. The Famous "Puritan" crochet cotton, Article 40, 2 balls White
+1 ball Kelly Green and "Star" Six Strand Embroidery Cotton, Article 501 skein Yellow.<br>
+Steel crochet hook No. 7
+<br>Doily Measures about 18 inches in diameter.
 <br><b>1st Round:</b> With White ch 5, join to form a ring, Ch 4, dc in ring, * ch 1, dc in ring, repeat from * 13 times, ch 1, join in 3rd st of ch. 
 <br><font color="red">(Sixteen dc's in ring total counting ch 4 at beg.)</font>
 <br><b>2nd Round:</b> * Ch 3, sc in next dc, repeat from * all around, ch 3, join.
@@ -76,17 +65,7 @@ Use needle and sew the 2 sides together having the point at top. Sew in position
 <br><br>
 Starching: Pin center and outer edge of doily in position according to size. Pull folds of ruffle in position. Place (1) lily in every 4th fold of ruffle as in photo and leave until thoroughly dry. Lilies can be sewn in position if desired.
 <br><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- crochet stuff -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5410888958"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 </font> 
 </td></tr></table></center>
