--- a/floral/orange.html
+++ b/floral/orange.html
@@ -2,199 +2,61 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Orange Blossom Doily - Free Crochet Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1LogBIh1uRZTJ3HXLqAcsq3hX-NsuezXf&export=download&export=download"><img src="images/orange.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Orange Blossom Doily - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Orange Blossom Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
- J. & P. COATS BIG BALL BEST SIX CORD MERCERIZED CROCHET, Art. A.104, Size 30: 1 ball each of White and No. 43 Dk. Yellow; or CLARK'S BIG BALL MERCERIZED CROCHET, Art. B.34, Size 30: 1 ball each of White and No. 43 Dk. Yellow. Milwards Steel Crochet Hook No. 10. 
-
-
-<br>
-
-
-<b>1st rnd:</b> CENTER . . . With White, ch 10. Join with sl st to form ring. Make 16 sc in ring. Join. 
-
-
-<br>
-
-
-<b>2nd rnd:</b> Ch 7, * skip next sc, dc in next sc, ch 4. Repeat from * around. Join last ch-4 to 3rd ch of ch-7. 
-
-
-<br>
-
-
-<b>3rd rnd:</b> Sl st in next ch and in next sp, ch 10, * dc in next sp, ch 7. Repeat from * around. Join last ch-7 to 3rd ch of ch-10. 
-
-
-<br>
-
-
-<b>4th rnd:</b> Sl st in next ch and in next loop, ch 3, 8 dc in same loop, * ch 4, 9 dc in next loop. Repeat from * around. Join and break 
-
-
-
-
-
+<br> J. & P. COATS BIG BALL BEST SIX CORD MERCERIZED CROCHET, Art. A.104, Size 30: 1 ball each of White and No. 43 Dk. Yellow; or CLARK'S BIG BALL MERCERIZED CROCHET, Art. B.34, Size 30: 1 ball each of White and No. 43 Dk. Yellow. Milwards Steel Crochet Hook No. 10. 
+<br><b>1st rnd:</b> CENTER . . . With White, ch 10. Join with sl st to form ring. Make 16 sc in ring. Join. 
+<br><b>2nd rnd:</b> Ch 7, * skip next sc, dc in next sc, ch 4. Repeat from * around. Join last ch-4 to 3rd ch of ch-7. 
+<br><b>3rd rnd:</b> Sl st in next ch and in next sp, ch 10, * dc in next sp, ch 7. Repeat from * around. Join last ch-7 to 3rd ch of ch-10. 
+<br><b>4th rnd:</b> Sl st in next ch and in next loop, ch 3, 8 dc in same loop, * ch 4, 9 dc in next loop. Repeat from * around. Join and break 
 off. 
-
-
 <br><b>FLOWER</b> (Make 8)
-
-
 <br><b>1st rnd:</b> Starting at center with Dk. Yellow, ch 8. Join with sl st to form ring.  Make 12 sc in ring. Join. 
-
-
 <br><b>2nd rnd:</b> Ch 4, holding back on hook the last loop of each tr, make 2 tr in next sc, thread over and draw through all loops on hook, 
-
-
 ch 4, sl st in next sc. Repeat from * around. Join and break off. 
-
-
 <br><b>Join flowers to center as follows:</b> Attach White to any ch-4 loop on Center, sl st in tip of any petal on one Flower, ch 4, skip next 4 
-
-
-dc on center, sl st in next dc, ch 7, sl st in tip of next petal of same Flower, ch 3, sl st in 3rd ch preceding last sl st, ch 3, sl st in any petal on 
-
-
-next flower, ch 3, sl st in same ch on Center as last sl st was made, ch 3, sl st in same dc as first sl st was made, ch 4, sl st in next loop on 
-
-
+dc on center, sl st in next dc, ch 7, sl st in tip of next petal of same Flower, ch 3, sl st in 3rd ch preceding last sl st, ch 3, sl st in any petal on next flower, ch 3, sl st in same ch on Center as last sl st was made, ch 3, sl st in same dc as first sl st was made, ch 4, sl st in next loop on 
 center, sl st in next petal on same flower. Repeat from * until 3 petals on each flower have been joined. Join and break off. 
-
-
 <br><b>Now work around flowers as follows: 1st rnd:</b> Attach White to tip of first free petal on any flower, sc in same place, * (ch 7, sc in 
-
-
 tip of next petal) twice; ch 7, sc in free petal of next flower. Repeat from * around. Join. 
-
-
 <br><b>2nd rnd:</b> Sl st in next ch and in next loop, ch 4, holding back on hook the last loop of each tr, make 2 tr in same loop, thread over and 
-
-
 draw through all loops on hook (cluster made), ch 2, in same loop make (3-tr cluster, ch 2) 3 times; in next loop make (3-tr cluster, ch 2) 4 
-
-
 times; * dc in next loop, ch 2, in each of next 2 loops make (cluster, ch 2) 4 times. Repeat from * around. Join to tip of first cluster. 
-
-
 <br><b>3rd rnd:</b> Sl st in next ch and in next loop, ch 4, make 2-tr cluster in same loop, * (ch 2, 3-tr cluster in next loop) 6 times; ch 5, sc 
-
-
 in next dc, ch 5, 3-tr cluster in next loop between clusters. Repeat from around. Join. 
-
-
 <br><b>4th rnd:</b> Sl st in next ch and in next loop, ch 4, cluster in same loop, * (ch 2, cluster in next loop) 5 times; ch 5, sc in next loop, ch 
-
-
 2, sc in next loop, ch 5, cluster in next loop. Repeat from * around. Join. 
-
-
 <br><b>5th rnd:</b> Sl st in next ch and in next loop, ch 4, cluster in same loop, * (ch 2, cluster in next loop) 4 times; (ch 5, sc in next ch-5 
-
-
 loop) twice; ch 5, cluster in next loop. Repeat from * around. Join. 
-
-
 <br><b>6th rnd:</b> Sl st in next ch and in next loop, ch 4, cluster in same loop, * (ch 2, cluster in next loop) 3 times; ch 5, sc in next loop, ch 
-
-
 5, in center ch of next loop make tr, ch 3 and tr; ch 5, sc in next loop, ch 5, cluster in next loop. Repeat from * around. Join. 
-
-
 <br><b>7th rnd:</b> Sl st in next ch and in next loop, ch 4, cluster in same loop, * (ch 2, cluster in next loop) twice; ch 7, skip next loop, tr in 
-
-
 center ch of next loop, ch 5, in next loop make tr, ch 3 and tr; ch 5, tr in center ch of next loop, ch 7, skip next loop, cluster in next loop. 
-
-
 Repeat from * around. Join. 
-
-
 <br><b>8th rnd:</b> Sl st in next ch and in next loop, ch 4, cluster in same loop, * ch 3, cluster in next loop, (ch 5, tr in next loop) twice; ch 5, 
-
-
 in next loop make tr, ch 3 and tr; (ch 5, tr in next loop) twice; ch 5, cluster in next loop. Repeat from * around. Join. 
-
-
 <br><b>9th rnd:</b> Sl st in next ch and in next loop, ch 9, tr in next loop, ch 5. Repeat from * around. Join and break off (64 loops). Make 32 
-
-
 flowers as before. 
-
-
 <br><b>Join flowers as follows:</b> Attach White to any loop, 3 sc in same loop, sl st in tip of any petal on any Flower, * 3 sc in same loop, 3 
-
-
 sc in next loop, ch 7, sl st in next petal of same flower, ch 3, sl st in 3rd ch preceding last sl st, ch 3, sl st in any petal on next flower, ch 3, 
-
-
 sl st in same ch as last sl st was made, ch 3, 3 sc in same loop as last 3 sc were made, 3 sc in next loop, sl st in next petal. Repeat from * 
-
-
 around until 3 petals on each flower have been joined. Join and break off. 
-
-
 <br><b>Now work around Flowers as follows:
-
-
 <br>1st rnd:</b> Attach White to tip of center free petal on any flower, sc in same place, ch 7, sc in next petal, * ch 3, holding back on 
-
-
 hook the last loop of each dtr, make dtr in each of next 2 joining loops between flowers, thread over and draw through all loops on hook 
-
-
 (joint dtr made), ch 3, sc in next free petal, (ch 7, sc in next petal) twice. Repeat from * around. Join.
-
-
 <br><b>2nd rnd:</b> Ch 8, * sc in next loop, ch 5, sc in next joint dtr, ch 5, sc in next loop, ch 5, dc in next sc, ch 5. Repeat from * around. 
-
-
 Join last ch-5 to 3rd ch of ch-8. 
-
-
 <br><b>3rd rnd:</b> Ch 4, tr in same place as sl st, ch 2, in same place make 2-tr cluster, ch 2 and 2-tr cluster; * ch 7, skip next loop, sc in 
-
-
 next loop, ch 7, sc in next loop, ch 7, in next dc make (2-tr cluster, ch 2) twice and 2-tr cluster. Repeat from * around. Join. 
-
-
-<br><b>4th rnd:</b> Sl st in next sp, ch 4, in same sp make tr, ch 2 and 2-tr cluster; * ch 2, in next sp make 2-tr cluster, ch 2 and 2-tr cluster; ch 9, skip 
-
-
-next loop, sc in next loop, ch 9, in next ch-2 sp make 2-tr cluster, ch 2 and 2-tr cluster. Repeat from * around. Join and break off. 
-
-
+<br><b>4th rnd:</b> Sl st in next sp, ch 4, in same sp make tr, ch 2 and 2-tr cluster; * ch 2, in next sp make 2-tr cluster, ch 2 and 2-tr cluster; ch 9, skip next loop, sc in next loop, ch 9, in next ch-2 sp make 2-tr cluster, ch 2 and 2-tr cluster. Repeat from * around. Join and break off. 
 <br><b>5th rnd:</b> Attach Yellow to first ch-2 sp between clusters, sc in same sp, * (ch 3, sc in 3rd ch from hook-picot made-sc in next sp) 
-
-
 twice; ch 10, in next sc make d tr, picot and dtr; ch 10, sc in next sp between clusters. Repeat from * around. Join and break off. Starch 
-
-
 lightly and press. 
-
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
