--- a/floral/pansy.html
+++ b/floral/pansy.html
@@ -2,21 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Pansy Doily - Free Crochet Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1DN0Ehrjro0O_k4KOjNsT1lUtd5ylaFGM&export=download&export=download"><img src="images/pansy.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Framed In Pansy Doily - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Framed In Pansy Doily </span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-
-1 cone Lily Frost-tone Crochet Cotton in Ecru; Lily Sil-Tone Mercerized Crochet Cotton:-2 balls each Yellow, Orange, Lavender and Purple; 1 sk. Lily Six Strand Floss in Lt. Green. <br>Crochet hooks sizes 10 and 12. <br>Size 20 inches.
+<br>1 cone Lily Frost-tone Crochet Cotton in Ecru; Lily Sil-Tone Mercerized Crochet Cotton:-2 balls each Yellow, Orange, Lavender and Purple; 1 sk. Lily Six Strand Floss in Lt. Green. <br>Crochet hooks sizes 10 and 12. <br>Size 20 inches.
 <br><B>ROW 1:</B>CENTER In Frost-Tone and size 10 hook, ch 7, sl st in 1st st. Ch 3, 17 dc in ring, sl st in 3-ch.
 <br><b>ROW 2:</b> Ch 10, dtr in next dc, (ch 3, dtr in next dc) 16 times, ch 3, sl st in 7th st of 10-ch.
 <br><b>ROW 3:</b> Ch 1, * (2 sc, ch 5, sl st in last sc for a p and 2 sc) all in next sp, sc in dtr. Repeat from * around. Sl st in 1st 1-ch.
@@ -62,18 +52,7 @@ Row 1.
 <br>Pin right-side-down in true shape on a padded board or table, stretching several inches to open out pattern. Steam and press dry thru a cloth.
 
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
