--- a/floral/pansy2.html
+++ b/floral/pansy2.html
@@ -2,22 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Pansy Doily - Free Crochet Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1d4-wjHWo6lBF4gPArT5bYX9OjFd4eJmR&export=download&export=download"><img src="images/pansy2.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Pansy Doily - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Pansy Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
- 
-
-Shaded yellow and purple pansies surrounding a white daisy center make this a lovely, colorful doily. Finished size 
+<br>Shaded yellow and purple pansies surrounding a white daisy center make this a lovely, colorful doily. Finished size 
 measures approximately 12 inches in diameter. You will need American Thread Company's Famous "Puritan" 
 Mercerized Crochet Cotton in the following amounts and colors: one 250 yard ball of white, one 175 yard ball each 
 of shaded yellow, shaded purple and green. Use a number 7 steel crochet hook. 
@@ -50,18 +39,7 @@ are joined. Fasten off.
 
 
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
