--- a/floral/peasant.html
+++ b/floral/peasant.html
@@ -2,21 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Peasant Doily - Free Crochet Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1MAnHNtvnF8Ubhb5EID8RXlDfRmmWq3CO&export=download&export=download"><img src="images/peasant.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Peasant Doily - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Peasant Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
- 
- Number 30 crochet cotton and number 12 steel crochet hook. You will need about 675 yards of thread. Doily measures about 28 1/2 inches in diameter. 
+<br> Number 30 crochet cotton and number 12 steel crochet hook. You will need about 675 yards of thread. Doily measures about 28 1/2 inches in diameter. 
 <br><b>Abbreviations:</b> ch (chain) tr (treble) st (stitch) dtr (double treble) sl st (slip stitch) sk (skip) sc (single crochet) lp (loop) dc (double crochet) rnd (round).
 
 <br><b> Circle of Wheels:</b> This circle is completed first in order to have it ready for joining when working rnd 18 of doily center. 
@@ -62,21 +52,8 @@ has a ch 11.
 <br><b>Rnd 36:</b> Sl st in each of the 6 ch sts, sl st in each of 2 dtr, * make sts in parenthesis in rnd 33 once, (ch 6, dtr in next dtr) twice, ch 6, dtr in 7th st of ch 13, ch 13, dtr in same st with last dtr, (ch 6, dtr) twice, ch 6, sl st in each of next 2 dtr, repeat from * around, sl st at base of beginning ch. 
 <br><b>Rnd 37:</b> Sl st in each of the 6 ch sts to tip of point, sl st in each of 2 dtr, (ch 6, dtr in next dtr) 3 times, ch 6, dtr in 7th st of ch 13, ch 13, dtr in same st with last dtr, (ch 6, dtr in next dtr) 3 times, ch 6, sl st in each of next 2 dtr, repeat from * around, sl st at base of beginning ch. 
 <br><b>Rnd 38:</b> * Ch 5, sc in next dtr, make a 3 picot group (to make a 3 picot group: ch 6, sl st in sc for a picot, ch 8, sl st in same sc, ch 6, sl st in same sc) repeat from * 4 times, ch 5, sc in 7th st of ch 13, make a 3 picot group. This brings you to tip of scallop, make four more 3 picot groups along side of scallop toward inner point, after the 4th group, ch 5, sc at inner point and repeat from * around, sl st beginning. Fasten off. 
-
-
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
