--- a/floral/petals.html
+++ b/floral/petals.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Petals Doily - Free Crochet Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1hOMzjuUzn0aiySLosr22FoghABcYoPPF&export=download&export=download"><img src="images/petals.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Petals Doily - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Petals Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-You will need 5 balls of J. & P. Coats Knit Cro-Sheen metallic thread in the color of your choice and a size 6 steel crochet hook to make a doily measuring approximately 15 inches. 
+<br>You will need 5 balls of J. & P. Coats Knit Cro-Sheen metallic thread in the color of your choice and a size 6 steel crochet hook to make a doily measuring approximately 15 inches. 
 <br><br><b>Abbreviations:</b> ch (chain) dc (double crochet) sl st (slip stitch) rnd (round) sc (single crochet) sk (skip) hdc (half double crochet) lp (loop)  
 <br><b>Rnd 1:</b> Starting at center, ch 5, sl st first ch st to form a ring.  15 sc in ring, sl st in first sc. 
 <br><b>Rnd 2:</b> Sc in same st with sl st, * ch4, sk 2 sc, repeat from * around, end with a sl st * ch 4, sk 2 sc, sc in next sc, repeat from * around, end with a sl st in first sc. There are 5 lps. 
@@ -35,21 +26,8 @@ You will need 5 balls of J. & P. Coats Knit Cro-Sheen metallic thread in the col
 <br><b>Rnd 28:</b> Repeat rnd 4. 
 <br><b>Rnd 29:</b> Repeat rnd 3. 
 <br><b>Rnd 30:</b> Work in same manner as for rnd 26 except increase 8 lps evenly spaced around. Repeat rnds 27 through 30 until doily measures 15 inches in diameter, ending with a petal rnd. Fasten off. Wet doily, pin in true circle, spray with starch and allow to dry before removing pins. 
-
-
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
