--- a/floral/poppy.html
+++ b/floral/poppy.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Poppy Doily - Free Crochet Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1-zhQp3bNSfplbCD4u09OTeNchnlm_Aen&export=download&export=download"><img src="images/poppy.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Poppy Doily - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Poppy Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-To make this doily you will need a size 8 steel crochet hook and four balls of number 30 crochet cotton in white, red or orange, green and black. Measures about 8 inches in diameter. <br><b>Abbreviations:</b> Rnd (round); ch (chain); dc (double crochet); sc (single crochet); inc (increase); tr (treble)—thread over 3 times and work off 2 loops at a time; lp (loop); sl st (slip stitch); hdc (half double crochet) —thread over once, insert hook in st and pull lp through, thread over and work off all lps at one time. 
+<br>To make this doily you will need a size 8 steel crochet hook and four balls of number 30 crochet cotton in white, red or orange, green and black. Measures about 8 inches in diameter. <br><b>Abbreviations:</b> Rnd (round); ch (chain); dc (double crochet); sc (single crochet); inc (increase); tr (treble)â€”thread over 3 times and work off 2 loops at a time; lp (loop); sl st (slip stitch); hdc (half double crochet) â€”thread over once, insert hook in st and pull lp through, thread over and work off all lps at one time. 
 <br><b>Center:</b> In white ch 10, join with sl st to form ring. 
 <br><b>Rnd 1:</b> Ch 3 (counts as a dc) , 29 dc in ring, join with a sl st in top of ch 3. 
 <br><b>Rnd 2:</b> Ch 4, * dc in next dc, ch 1, repeat from * around, sl st in third st of beginning ch. 
@@ -25,30 +16,16 @@ To make this doily you will need a size 8 steel crochet hook and four balls of n
 <br><b>Rnds 8 and 9:</b> Repeat rnd 7. 
 <br><b>Rnds 10 and 11:</b> * Ch 7, sc in next lp, repeat from * 28 times, end with ch 3, tr at base of first ch. 
 <br><b>Rnd 12:</b> * Ch 8, sc in next lp, repeat from * 28 times, end with ch 4, tr at base of first ch. 
-<br><b>Rnd 13:</b> Sl st to center of first lp in previous rnd, (ch 3 for a dc, 2 dc, ch 3, 3 dc—a shell made) in same lp, ch 4, sc in next lp, ch 8, sc in next lp, ch 4, a shell in next lp, ch 4, sc in next lp, ch 8, sc in next lp, ch 4, repeat from * around, end with sl st in first ch 3. Fasten off. 
+<br><b>Rnd 13:</b> Sl st to center of first lp in previous rnd, (ch 3 for a dc, 2 dc, ch 3, 3 dcâ€”a shell made) in same lp, ch 4, sc in next lp, ch 8, sc in next lp, ch 4, a shell in next lp, ch 4, sc in next lp, ch 8, sc in next lp, ch 4, repeat from * around, end with sl st in first ch 3. Fasten off. 
 <br><b>Poppy: Center:</b> In black, ch 6, sl st in first ch to form ring, ch 3, make 14 dc into ring, sl st in ch 3. Fasten off. 
 <br><b>Petals:</b> Rnd 1: In red or orange, join to black center, ch 3, dc at base of ch 3, 2 dc in each of the remaining dc, sl st in top of ch 3. 
 <br><b>Rnd 2:</b> * Sc in each of next 3 dc, hdc and dc in next dc, 2 dc in next dc, dc and hdc in next dc. Repeat from * around, sl st in st at base of hdc. This forms 5 petals. 
 <br><b>Rnd 3:</b> * Sc in each of 3 sc, hdc and dc in next dc, 2 dc in each of 4 dcs, dc and hdc in next dc, repeat from 8 around, sl st at base of hdc. 
 <br><b>Rnd 4:</b> * Sc in each of next 3 sc, hdc and dc in next dc, 2 dc in each of next 10 dcs, dc and hdc in next dc, repeat from * around, sl st in first sc. Fasten off. 
 <br><b>Rnd 5:</b> Join green thread near center of any petal, ch 4, sc in next st, ch 1, sc to ch of a shell on center, ch 1, sc in next st on petal, * ch 4, sc in next st, repeat from * around, sl st at base of first ch 4. Make 9 more poppies, as the outside edge is made always join to the ch of shell on center and to center of next free petal of last poppy. Starch lightly. Pin in true circle and press dry through a cloth. 
-
-
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-<br><br>
-
 </font> 
 </td></tr></table></center>
 </body></html>
