--- a/floral/rambler.html
+++ b/floral/rambler.html
@@ -2,21 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Rambler Rose Doily - Free Crochet  Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=18hK3Wwvnof0xaN87soe-jvjwArpbd3D6&export=download&export=download"><img src="images/rambler.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Rambler Rose Doily - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Rambler Rose Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
- 
-"Puritan" Mercerized Crochet Cotton, Art. 40 or "Deluxe" Quality Mercerized Crochet Cotton, Art. 346, 3 balls White, 2 balls Shaded Yellows, 1 ball Kelly
+<br>"Puritan" Mercerized Crochet Cotton, Art. 40 or "Deluxe" Quality Mercerized Crochet Cotton, Art. 346, 3 balls White, 2 balls Shaded Yellows, 1 ball Kelly
 Green.
 <BR>Steel crochet hook No. 7
 <br>Doily measures 23 inches in diameter.
@@ -57,18 +47,7 @@ center motif, ch 7, sl st in same space, ch 5, sc in next loop, ch 5, sl st in c
 <br><b>NEXT ROUND:</b> Sl st in next st, ch 7, sl st in same space, ch 3, join to center picot of 1st free picot cluster of small motif, ch 3, sl st in same space to complete picot, ch 7, sl st in same space, 1 sc in each of the next 4 dc, ch 7, sl st in same space, ch 3, join to center picot of picot clusterof next small motif, ch 3, complete picot, ch 7, sl st in same space, 1 sc in each of the next 4 dc of joining motif, ch 7, sl st in same space, ch 3, join to center picot of 1st free picot clusterof center motif, ch 3, sl st in same space, ch 7, sl st in same space, 1 sc in each of the next 4 dc of joining motif and join next picot cluster of center motif in same manner, 1 sc in each of the next 4 dc of 
 joining motif, join, cut thread.Work a joining motif in each of the next 7 spaces around center motif.
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
