--- a/floral/red.html
+++ b/floral/red.html
@@ -1,20 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Red White Doily - Free Vintage Crochet Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1CdQHla8bPMzq6y0d2BGXzL8GhgGUF0MV&export=download"><img src="images/red.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Red White Doily - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Red White Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-"PURITAN" CROCHET COTTON Article 40 or "DE LUXE" CROCHET COTTON Article 346 
+<br>"PURITAN" CROCHET COTTON Article 40 or "DE LUXE" CROCHET COTTON Article 346 
 <br>Quantity 1 ball White 1 ball Bright Red 
 <br>Approx. Size of doily 11 1/2 inches<br> Hook size 7
 <br><b>CENTER FLOWER:</b> With Red ch 7, join to form a ring, ch 1 and work 12 sc in ring, join, drop Red. <br><b>Next Row:</b> Attach White in 1st sc, *ch 4, 3 dtrc (3 times over hook) in same space, 3 dtrc in next sc, ch 4, sl st in same sc, sl st in next sc, repeat from *. 5 times, cut White. 
@@ -33,17 +24,7 @@
 
 
 <br><br>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
