--- a/floral/roser.html
+++ b/floral/roser.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Irish Rose - Free Crochet Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1vimdUX4pkRijbcw5ZDUwSqEFZnA_AW6T&export=download&export=download"><img src="images/roser.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Irish Rose - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Irish Rose Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
- J. & P. COATS "BIG BALL" BEST SIX CORD MERCERIZED CROCHET, Art. A.105, Size 30: 1 ball of No. 1 White or No. 61 Ecru; or <br>
+<br>J. & P. COATS "BIG BALL" BEST SIX CORD MERCERIZED CROCHET, Art. A.105, Size 30: 1 ball of No. 1 White or No. 61 Ecru; or <br>
 CLARK'S "BIG BALL" MERCERIZED CROCHET, Art. B.34, Size 30: 2 balls of No. 1 White, No. 42 Cream or No. 61 Ecru; Or <br>
 CLARK'S "BIG BALL" MERCERIZED CROCHET, Art. B.345, Size 30: 1 ball of No. 1 White or No. 61 Ecru; AND 
 <br>COATS & CLARK'S O.N.T. "SPEED-CRO-SHEEN" MERCERIZED COTTON: 1 ball of same color. 
@@ -71,7 +62,7 @@ BACKGROUND Cut a 4-inch piece of "Speed-Cro-Sheen." Starting at center with Size
 <br><b>30th rnd:</b> Ch 1, sc in loop just formed, * ch 9, skip next ch-3 loop, sc in next loop. Repeat from * around, ending with ch 9. Join to first sc. Do not break off. 
 
 
-<br><b>POINTED EDGING</b> * For next large point, make 11 sc in each of next 2 loops, make 6 sc in next loop, ch 9; turn, skip the incompleted sc-loop in work, sc in the 6th sc of next sc-loop, ch 9, sl st in the 6th sc of following sc-loop, ch 1; turn, 11 sc in loop just formed, 6 sc in next loop, ch 9; turn, skip the incompleted sc-loop, sl st in the 6th sc of next sc-loop, ch 1; turn, in loop just formed make 6 sc, ch 4, sl st in 4th ch from hook—picot made, and 5 sc, (sl st in the 6th sc of next incompleted sc-loop, 5 sc in same loop) twice; for next small point, make 11 sc in next loop of the 30th rnd, make 6 sc in following loop, ch 9; turn, skip the incompleted sc-loop in work, sl st in the 6th sc of next sc-loop; ch 1, turn, in next loop make 6 sc, picot and 5 sc, sl st in the 6th sc of next incompleted sc-loop, 5 sc in same loop. Repeat from * around. Join. Break off and fasten. 
+<br><b>POINTED EDGING</b> * For next large point, make 11 sc in each of next 2 loops, make 6 sc in next loop, ch 9; turn, skip the incompleted sc-loop in work, sc in the 6th sc of next sc-loop, ch 9, sl st in the 6th sc of following sc-loop, ch 1; turn, 11 sc in loop just formed, 6 sc in next loop, ch 9; turn, skip the incompleted sc-loop, sl st in the 6th sc of next sc-loop, ch 1; turn, in loop just formed make 6 sc, ch 4, sl st in 4th ch from hookâ€”picot made, and 5 sc, (sl st in the 6th sc of next incompleted sc-loop, 5 sc in same loop) twice; for next small point, make 11 sc in next loop of the 30th rnd, make 6 sc in following loop, ch 9; turn, skip the incompleted sc-loop in work, sl st in the 6th sc of next sc-loop; ch 1, turn, in next loop make 6 sc, picot and 5 sc, sl st in the 6th sc of next incompleted sc-loop, 5 sc in same loop. Repeat from * around. Join. Break off and fasten. 
 
 <br><b>FLOWER AND LEAF BORDER</b> Flower Starting at center, ch 7. Join with sl st to form ring. 
 
@@ -79,7 +70,7 @@ BACKGROUND Cut a 4-inch piece of "Speed-Cro-Sheen." Starting at center with Size
 
 <br><b>2nd rnd:</b> Ch 1, sc in joining, ch 4, skip next sc, * sc in next sc, ch 4, skip next sc. Repeat from * around, ending with sl st in first sc-6 loops. 
 
-<br><b>3rd rnd:</b> In each of next 2 loops, make sc, hdc, 3 dc, hdc and sc—petal made; sl st in the picot at tip of any small point; make a petal in each of remaining 4 loops. Join to first sc. Break off and fasten. Make a Flower at the tip of re-maining 12 small points. SMALL 
+<br><b>3rd rnd:</b> In each of next 2 loops, make sc, hdc, 3 dc, hdc and scâ€”petal made; sl st in the picot at tip of any small point; make a petal in each of remaining 4 loops. Join to first sc. Break off and fasten. Make a Flower at the tip of re-maining 12 small points. SMALL 
 <br><b>LEAF</b> Starting at center, ch 15. 
 
 <br><b>1st rnd:</b> Sc in 2nd ch from hook and in each ch across, sl st in the picot at tip of any large point (tip of leaf); sc in same ch where last sc was made; working along opposite side of starting chain, sc in each ch to within last ch, make 2 sc in same place where first sc was made (base of leaf). 
@@ -105,18 +96,7 @@ BACKGROUND Cut a 4-inch piece of "Speed-Cro-Sheen." Starting at center with Size
 <br><b>2nd rnd:</b> Working without the padding, * sc in next sc, (skip next sc, sc in next sc) 3 times for base of scallop; sc in next sc, picot, (sc in next 5 sc, picot) 3 times; sc in next sc, 2 sc in next sc, sc in next 3 sc, picot, sc in next 2 sc, 2 sc in next sc, sc in next 2 sc, picot, (sc in next 5 sc, picot) 3 times. Repeat from * around. Join, break off and fas-ten. Spread sts evenly along the padding, so that all scallops will be the same size. Cut off padding and fasten on wrong side. Arrange band on background so that the starting chain at the base of each scallop touches the top of the 21st rnd as shown. Baste scallops through the background and the paper. Leaving the basting sts intact, tear paper away. Sew flowers, leaves and scallops securely in place. Starch lightly and press. 
 
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
