--- a/floral/roset.html
+++ b/floral/roset.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Rose Doily Set - Free Crochet Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1uqIXqsJ39o9SceyghMCHijnl8Phkg7Sb&export=download&export=download"><img src="images/roset.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Rose Doily Set - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Rose Doily Set</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-MATERIALS: J. & P. Coats or Clark's O.N.T. Pearl Cotton, Size 5: 10 balls of No. 1 White, 3 balls of No. 48 Hunter's Green and 2 balls of No. 15 Shaded Pinks, or J. & P. Coats "Knit-Cro-Sheen": 2 balls of No. 1 White and 1 ball each of No. 48 Hunter's Green and No. 15 Shaded Pinks. 
+<br>MATERIALS: J. & P. Coats or Clark's O.N.T. Pearl Cotton, Size 5: 10 balls of No. 1 White, 3 balls of No. 48 Hunter's Green and 2 balls of No. 15 Shaded Pinks, or J. & P. Coats "Knit-Cro-Sheen": 2 balls of No. 1 White and 1 ball each of No. 48 Hunter's Green and No. 15 Shaded Pinks. 
 Milwards Steel Crochet Hook No. 7. A wire napkin holder, 5 inches in diameter. An hot plate mat, 8 1/2 inches in diameter. 1/2 yard of white felt, 36 inches wide. A bone ring. 3 yards of white satin ribbon, 1/2 inch wide. 
 ROUND HOT PLATE MAT Starting at center with Shaded Pinks, ch 6. Join with sl st to form ring. 
 <br><b>1st rnd:</b> Ch 1, 12 sc in ring, sl st in first sc. 
@@ -61,23 +52,9 @@ Now work around joined motifs as follows: 1st rnd:</b> Attach Green and repeat 1
 <br><b>18th row:</b> Skip first dc, dc in each dc across, increasing 8 dc evenly across rounded end. Break off (181 dc on 18th row). 
 <br><b>JOINING 1st rnd:</b> Holding both thicknesses together, attach White to center loop on long side of front and through end dc's on both pieces of back, sc in same place, * ch 10, skip 4 dc on back and, working through both thicknesses, make sc in next loop on front and next dc on back. Repeat from * around, joining end dc's of each piece on next long side as before. Join. 
 <br><b>2nd rnd:</b> In each loop around make 6 sc, ch 5 and 6 sc. Join and break off. Attach White to opening at back and sc closely around. Cut 3 thicknesses of felt to shape for lining. Sew around outer edges. Slip cover over felt mat. 
-
-
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-<br><br>
-
 </font> 
 </td></tr></table></center>
 </body></html>
