--- a/floral/violet.html
+++ b/floral/violet.html
@@ -2,21 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Free Crochet Pattern - Violets Doily </title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1UamHlE8l2EIn8SdIWwV4GaSqnrFrdDiv&export=download"><img src="images/violet.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Violet Large and Small Crochet Doily Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Violet Doily Large and Small</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-Materials Required: AMERICAN THREAD COMPANY The Famous "PURITAN" STAR SPANGLED MERCERIZED CROCHET COTTON, ARTICLE 40 1 ball Silver Spangle and The Famous "PURITAN" MERCERIZED CROCHET COTTON, ARTICLE 40; 1 ball each Kelly Green and Shaded Purples or colors of your choice. Steel crochet hook No. 6. 
-
+<br>Materials Required: AMERICAN THREAD COMPANY The Famous "PURITAN" STAR SPANGLED MERCERIZED CROCHET COTTON, ARTICLE 40 1 ball Silver Spangle and The Famous "PURITAN" MERCERIZED CROCHET COTTON, ARTICLE 40; 1 ball each Kelly Green and Shaded Purples or colors of your choice. Steel crochet hook No. 6. 
 <br>Approximate size. Large Doily 11 inches in diameter. Approximate size: Small Doily 7 1\2 inches in diameter. 
 <br><b>Large Doily:</b> With Silver Spangle chain (ch) 8, join to form a ring, * ch 14, slip stitch (sl st) in 6th st from hook to form ring, ch 8, single crochet (sc) in 1st ring, repeat from * 9 times, cut thread. 
 <br><b>2nd Round:</b> Attach Shaded Purple in any small ring, * ch 3, 2 treble crochet (trc) in ring, ch 3, sc in ring, repeat from * 4 times (African Violet), ch 2, sc in next small ring, repeat from 1st * all around, ch 2, join, cut Shaded Purple. 
@@ -32,18 +22,7 @@ Materials Required: AMERICAN THREAD COMPANY The Famous "PURITAN" STAR SPANGLED M
 <br><b>8th Round:</b> * 2 sc in next loop, ch 5, sl st in 1st ch for picot, 2 sc in same loop, 5 sc in next loop, ch 5, sl st in 1st ch for picot, 5 sc in same loop, 1 sc, ch 5, 1 sc in top of cluster st, 5 sc in next loop, ch 5, sl st in 1st ch for picot, 5 sc in same loop, repeat from * all around, join, cut thread.
 
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 </font> 
 </td></tr></table></center>
