--- a/floral/wildrose.html
+++ b/floral/wildrose.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Wild Rose Doily - Free Crochet Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=147Dt4us_orw7LQ6yGay9ESaymPZx3t9d&export=download&export=download"><img src="images/wildrose.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Wild Rose Doily - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Wild Rose Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
- AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40 1 ball each White, Kelly Green and Shaded Pink. Steel crochet hook No. 7. Approximate size: 19 inches in diameter
+<br>AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40 1 ball each White, Kelly Green and Shaded Pink. Steel crochet hook No. 7. Approximate size: 19 inches in diameter
 <br><b>Flower</b> 
 <br><b>1st Row:</b> With Shaded Pinks chain (ch) 8, join to form a ring, ch 1 and work 12 single crochet (sc) in ring, join in 1st sc.
 <br><b>2nd Row:</b> Slip stitch (sl st) in back loop of next st, * ch 3, 4 double crochet (dc) in same st, ch 2, turn.
@@ -55,21 +46,8 @@
 <br><b>30th Round:</b> Sl st to next dc, ch 3, 1 dc in each of the next 2 dc keeping last loop of each dc on hook, thread over and work off all loops at one time, ** ch 2, sc in 1st free loop around next flower, * ch 7, sc in next loop, repeat from * 9 times, ch 2, skip 1 dc, 3 dc cluster over next 3 dc, repeat from ** all around ending to correspond, ch 2, join in 1st cluster, cut thread.
 <br><b>31st Round:</b> Attach Green in next ch 7 loop, * ch 8, sc in next loop, repeat from * 8 times, skip next cluster, sc in 1st ch 7 loop around next flower, repeat from 1st * all around, join in 1st sc.
 <br><b>32nd Round:</b> Sl st into loop, ch 1 and work 2 sc in same loop, * ch 7, 3 dc cluster st in next loop, ch 3, sl st in top of cluster st just made for picot, ch 7, 2 sc in next loop, ch 3, sl st in last sc made for picot, sc in same loop, repeat from * twice, ch 7, cluster st in next loop, ch 3 picot, ch 7, 2 sc in next loop, ch 3 picot, 2 sc in next loop, repeat from 1st * all around ending to correspond, join, cut thread.
-
-
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
