--- a/floral/bouquet.html
+++ b/floral/bouquet.html
@@ -2,24 +2,14 @@
 <html><head>
 <title>FREE Floral Bouquet - Crochet Doily Pattern</title>
 <meta name="Description" content="Here is a free calla lily crochet doily pattern.  A beautiful doily that would look lovely in any room in your home. It's made with crochet cotton. ">
-<meta name="Keywords" content="crotchety crotchet crotchetiness crocheted crocheting crochetings crotchets crotchetiest crotchetier crotchetinesses crochets crotchetily embroidery needlework sewing needlepoint needlecraft tapestry sampler tatting appliqué arabesque bargello brocade crewel cross stitch cross-stitch decoration lace lacery quilting tracery crewel work stitching fancywork tailoring stitchery darning crocheting knitting patchwork embroidering dressmaking mending patching backstitching basting hemming seaming wool work lace net netting openwork tatting filigree lacework mesh meshwork fishnet tulle webbing bobbinet filetUS filletUK needlepoint passementerie appliqué Brussels lace Chantilly lace guipure rosaline banding bobbin lace border duchesse lace edging needlepoint lace ornament pillow lace point lace threadwork tissue trim trimming Honiton lace Nottingham lace">
+<meta name="Keywords" content="crotchety crotchet crotchetiness crocheted crocheting crochetings crotchets crotchetiest crotchetier crotchetinesses crochets crotchetily embroidery needlework sewing needlepoint needlecraft tapestry sampler tatting appliquÃ© arabesque bargello brocade crewel cross stitch cross-stitch decoration lace lacery quilting tracery crewel work stitching fancywork tailoring stitchery darning crocheting knitting patchwork embroidering dressmaking mending patching backstitching basting hemming seaming wool work lace net netting openwork tatting filigree lacework mesh meshwork fishnet tulle webbing bobbinet filetUS filletUK needlepoint passementerie appliquÃ© Brussels lace Chantilly lace guipure rosaline banding bobbin lace border duchesse lace edging needlepoint lace ornament pillow lace point lace threadwork tissue trim trimming Honiton lace Nottingham lace">
 </head><body>
 <center>
-<table width="90%" height="100%" border="0" cellpadding="50" bgcolor="white"><tr><td>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script><br>
-<p align="right">
-<a href="https://drive.google.com/uc?id=1_2Pa0xtMXVlNhfX9eC20gp-q9YEdrXLa&export=download"><img src="images/bouquet.jpg" align="right" width="400" height="420"></a>
+<table width="90%" height="100%" border="0" cellpadding="5" bgcolor="white"><tr><td>
+<p align="right"><a href="https://drive.google.com/uc?id=1_2Pa0xtMXVlNhfX9eC20gp-q9YEdrXLa&export=download"><img src="images/bouquet.jpg" align="right" width="400" height="420"></a>
 </p></center>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Floral Bouquet - Crochet Doily Pattern</b></font><br><br>
-<font face="verdana" size="2"><b>MATERIALS:</b>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Floral Bouquet Doily</span></font><br><br>
+<font face="verdana" size="2"><b>MATERIALS:</b><br>
 Today most crocheters use the newer crochet thread. I would suggest you use what you have or what you can find. I use crochet cotton #10 on almost all my doilies. I usually use southmaid or Aunt Lydia's. There are many different brands. It will make about 14 inch doily with #10. crochet cotton and a size 11 hook.
 <br><b>DAISY:</b> With Yellow ch 5, join to form a ring, ch 3 and work 17 dc in ring, join, break thread. 
 <br><b>PETAL:</b> With White ch 14, insert hook in any dc, pull loop through, ch 1, 1 sc in next st of ch, 1 sdc in each of the next 3 sts (s dc: thread over hook, insert in st, pull loop through, thread over and work off all loops at one time), 1 dc in each of the next 9 sts, 6 sdc in end st, working on opposite side of ch, 1 dc in each of the next 9 sts, 1 sdc in each of the next 3 sts, 1 sc in next st, sl st in same dc, break thread. Skip 1 dc, work another petal in next dc. Continue working in same manner all around. Work a 2nd daisy same as 1st daisy, joining it to 1st daisy as illustrated.
@@ -38,18 +28,7 @@ Starting with the large group of Blue forget-me-nots, work 6 forget-me-nots, joi
 <br><b>9th Row:</b> * Ch 4, sc in next loop, repeat from * twice, ch 6, skip 1 loop, 2 cluster sts with ch 3 between in next loop, ch 3, 3 cluster sts with ch 3 between each cluster st in next loop, ch 3, 2 clusters sts with ch 3 between in next loop, ch 6, skip 1 loop, sc in next loop, repeat from beginning all around ending row to correspond. 
 <br><b>10th Row:</b> Sl st to 2nd st of loop, ** ch 5, rice st in 5th st from hook (rice st: work 2 trc in st, keeping last loop of each st on hook, thread over and work off all loops at one time), dc in next loop, ch 3, sl st in dc for picot, ch 5, rice st in 5th st from hook, sc in next loop, ch 5, rice st in 5th st from hook, ch 3, sl st in rice st for picot, ch 5, rice st in 5th st from hook, sc in next cluster st, * ch 5, rice st in 5th st from hook, dc in next cluster st, picot, ch 5, rice st in 5th st from hook, sc in next cluster st, repeat from * twice, ch 5, rice st in 5th st from hook, picot, ch 5, rice st in 5th st from hook, skip 1 loop, sc in next loop, repeat from ** all around, join, break thread.
 <br><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- crochet stuff -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5410888958"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 </td></tr></table></center>
 </body></html>
