--- a/floral/daf.html
+++ b/floral/daf.html
@@ -2,19 +2,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Daffodil Doily - Free Crochet Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=18hQY0Prj-VYFtYAiuehdgqyY4o97r0UL&export=download&export=download"><img src="images/daf.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Daffodil Doily - Free Crochet Pattern</b></font><br><br>
-<font face="verdana" size="2"><b>MATERIALS:</b>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Daffodil Doily</span></font><br><br>
+<font face="verdana" size="2"><b>MATERIALS:</b><br>
 J. & P. COATS OR CLARK'S O.N.T. BEST SIX CORD MERCERIZED CROCHET, Size 30: Small Ball: J. & P. coats 2 balls of Bright 
 Nile Green and 4 balls of Dark Yellow, Or CLARK'S 0.N.T.-3 balls of Bright Nile Green and 6 balls of Dark Yellow . . . Steel Crochet Hook 
 No. 10. 
@@ -35,7 +26,7 @@ sp of next shell. Repeat from * around. Join.
 <br><b>10th, 11th and 12th rnds:</b> Shell over each shell, having 1 ch more between shells on each rnd. Join. Break off at end of 
 12th rnd. 
 <br><b>DAFFODIL</b> (Make 11) ... Starting at base of Daffodil, with Yellow, ch 5. Join with st to form ring. 
-<<br><b>1st rnd:</b> Ch 4, 11 tr in ring. Sl st in top of ch 4. 
+<br><b>1st rnd:</b> Ch 4, 11 tr in ring. Sl st in top of ch 4. 
 <br><b>2nd rnd:</b> Ch 4, tr in same place as sl st, * tr in next 2 tr, 2 tr in next tr (1 tr increased). Repeat from * around. Join. 
 <br><b>3rd rnd:</b> Sc in same place as sl st, sc in each tr around. 
 <br><b>4th rnd:</b> Sc in each sc around. 
@@ -59,20 +50,7 @@ in this manner. Attach thread at base of petal, 2 sc in sp, 3 sc in next sp, in 
 next sp, in next sp make 3 half dc and 2 sc, 4 dc in top sp. Work along side to correspond. Continue in this manner all around outer 
 edges of all petals. Insert flower through ring of petals and sew in place. Sew stamens in place. Apply sizing to stiffen flowers in order to preserve shape. Sew flowers around doily as follows: Tack tips of 2 petals of each flower to 2 shells on last shell rod of doily and tack together the points of the side petals of adjacent flowers. 
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-<br><br>
-</font> 
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 </td></tr></table></center>
 </body></html>
 
