--- a/floral/daisy.html
+++ b/floral/daisy.html
@@ -1,18 +1,9 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Free Crochet Pattern - Daisy Doily </title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1vSM9T-1wUKig7YYIvM6Gx0p-TScrcK12&export=download"><img src="images/daisy.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Free Crochet Daisy Doily Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Daisy Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
 
  "STAR" Tatting Cotton 2 Balls White 13 or 14.->6 1/2 inches.
@@ -65,17 +56,7 @@ between next 2 cluster sts, turn, sc in 2nd ch from hook, 1 sdc in each of the n
 center, then work 7 more petals to complete flower in same manner but do not join. 
 <br><b>2nd Flower:</b> Work Yellow center same as previous flower Attach White, ch 8, sc in 4th petal of previous flowers in 2nd ch from hook, 1 sdc in each of the next 6 sts of ch, sc in next sc of Yellow center, work another petal joining it in same space of doily as 3rd petal of previous flower, join 3rd petal in next picot of doily and join 4th petal to next ch 4 loop between next 2 cluster sts, complete flower same as 1st flower having 10 petals. Work 18 more flowers joining same as 2nd flower and join last flower to corresponding petal of 1st flower.  
 <br><br>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 </font> 
 
