--- a/floral/dogwood.html
+++ b/floral/dogwood.html
@@ -2,18 +2,9 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Dogwood Doily - Free Crochet Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1m8sUdNeBBau0J8dXti07M1K3LUr2ELLX&export=download&export=download"><img src="images/dogwood.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Dogwood Doily - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Dogwood Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
  Here's a striking example of the lovely pineapple doily with dogwood insert. This is a very elegant design with an air of grace and dignity. It measures about 24 inches in diameter, when crocheted with number 30 mercerized crochet thread and a number 12 steel crochet hook. 
 <br><b>Abbreviations:</b> ch (chain) sc (single crochet) tr (treble) rnd (round) sl st (slip stitch) lp (loop) dc (double crochet) p (picot) sp (space) sk (skip) 
@@ -52,18 +43,7 @@ shell, ch 4 (counts as 1 tr), 2 tr over same ch 3, ch 3, a 6-joined-tr over rema
 <br><b>Rnd 7:</b> Ch 9, sc in last tr of next tr-group of rnd 6, ch 9, sc in first tr of next tr-group, ch 9, sc over next ch 9, ch 4, dc in tip of second shell of pineapple from closing of pineapple, ch 4, (sk one shell of pineapple), sc in tip of next shell, ch 4, sc over next ch 9 of motif, ch 4, sc in tip of next shell, ch 4, se over next ch 9 of motif, ch 4, sc in third ch of ch 5 of previous rnd, ch 4, sc in last tr of dogwood petal, ch 4, sc in third ch of ch 5 of previous rnd, ch 4, sc in first tr of next petal, ch 4, sc in third ch of next ch 5 of previous rnd, ch 4, sc over next ch 9, make 3 more identical joinings on the corresponding shells of next pineapple, when the last joining is made, complete the ch 9 lps around remainder of the motif, sl st in last tr of previous rnd, cut thread and fasten, When the 16th dogwood motif is inserted between pineapples do not cut thread, but sl st into 5th ch of next ch 9, ch 1, se in same place as last sl st, (ch 11, sc over next ch 9) twice, ch 5, sc in tip of pineapple, ch 5, sc over first free ch 9 of next motif, (ch 5, turn work, sc over last ch 
 11 made, ch 5, turn work, sc over next ch 9) twice, (ch 11, sc over next ch 9) 12 times, repeat around, sl st in sc first made, cut thread and fasten. 
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
