--- a/floral/erin.html
+++ b/floral/erin.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Free Crochet Pattern - Rose of Erin Doily  </title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1K_7NtGUmw5SRhMiAmOb_qWvHnerTcWX8&export=download"><img src="images/erin.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Rose of Erin Doily - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Rose of Erin Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
- J. & P. COATS BIG BALL BEST SIX CORD MERCERIZED CROCHET, Art. A.104, Size 50: 2 balls ot White; or CLARK'S BIG BALL MERCERIZED CROCHET, Art. B.34, Size 50: 2 halls of White. 
+ <br>J. & P. COATS BIG BALL BEST SIX CORD MERCERIZED CROCHET, Art. A.104, Size 50: 2 balls ot White; or CLARK'S BIG BALL MERCERIZED CROCHET, Art. B.34, Size 50: 2 halls of White. 
 <br>Using Size 50 thread and No. 12 hook, doily measures 15 inches in diameter. 
 <br>Using Size 30 thread and No. 10 hook, doily measures 18 inches in diameter. 
 <br>Using Size 20 thread and No. 9 hook, doily measures 20 inches in diameter.
@@ -64,17 +55,7 @@
 <br><b>4th rnd:</b> Sc in first 5 sc, * 5 sc in next loop. (ch 10, sc in next loop) 6 times; ch 10, 5 sc in next loop. Sc in next 10 sc. Repeat from * around. join. 
 <br><b>5th rnd:</b> Sc in same place as sl st, * ch 3, in each of next 7 loops make 6 sc, ch 3, sc in 3rd ch front hook (picot made) and 6 sc: ch 3, sc in center of next sc group. Repeat from * around. Join and break off. Starch lightly and press. 
 <br><br>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 </font> 
 </td></tr></table></center>
