--- a/floral/flower.html
+++ b/floral/flower.html
@@ -2,21 +2,12 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Free Crochet Pattern - Flower Doily  </title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1tQ8dD1j0wwURoJazaWUs-O85pSKS_0MA&export=download"><img src="images/flower.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Pink Flower Doily - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Pink Flower Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
- AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40.  1 ball each White and Shaded Pinks or colors of your choice Steel crochet hook No. 7 Approximate size: 19 inches in diameter or "GEM" MERCERIZED CROCHET COTTON, Article 35, size 20 1 ball each White and Shadcd Pinks or colors of 
-your choice Steel crochet hook No. 12 Approximate size: 13 1/2 inches in diameter.<br><br>
+ <br> AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40.  1 ball each White and Shaded Pinks or colors of your choice Steel crochet hook No. 7 Approximate size: 19 inches in diameter or "GEM" MERCERIZED CROCHET COTTON, Article 35, size 20 1 ball each White and Shadcd Pinks or colors of 
+your choice Steel crochet hook No. 12 Approximate size: 13 1/2 inches in diameter.
 <br><b> 1st Round:</b>With White ch 6, join to form a ring, ch 6, dc in ring, * ch 3, dc in ring, repeat from *5 times, ch 3, join in 3rd St of ch. 
 <br><b>2nd Round:</b> Ch 1, * 4 sc in next loop, repeat from * around, join. 
 <br><b>3rd Round:</b> Ch 3 (counts as 1 dc), 1 dc in same space, ch 4, skip 3 sc, 2 dc in next sc, repeat from * all around, ch 4, join in 3rd st of ch. 
@@ -48,18 +39,7 @@ your choice Steel crochet hook No. 12 Approximate size: 13 1/2 inches in diamete
  <br><b>2nd FLOWER:</b> Work 1st and 2nd rounds same as 1st flower. 
 <br><b>3rd Round:</b> Sl st in next loop, ch 3, 3 dc in same space keeping last loop of each dc on hook, thread over and work off all loops at one time, join to 1st free petal on right hand side of 1st flower, ch 3, sl st in same space, * sc in top of next cluster, ch 3, sc in same space, sl st in next loop, ch 3, 3 dc in same space keeping last loop of each dc on hook, thread over and work off all loops at one time, join to center of next shell on doily, ch 3, sl st in same space on flower, repeat from * once, finish 2nd flower same as first flower, cut thread. Work 34 more flowers same as 2nd flower joining in same manner. Join last flower to 1st flower to correspond.
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 </font> 
 </td></tr></table></center>
