--- a/floral/holly.html
+++ b/floral/holly.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Holly Doily - Free Crochet Christmas Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1YQPGhCJ1TBywrQcpEcb6t_B_yBl6vGd5&export=download&export=download"><img src="images/holly.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Holly Doily - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Holly Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
- Crochet Cotton Size 20. Hook size 12. Doily will measure about 12 inches in diameter.<br>
+ <br>Crochet Cotton Size 20. Hook size 12. Doily will measure about 12 inches in diameter.
 <br><b>Leaf:</b> With Green starting at lower edge, ch 3, 2 dc in 3rd st from hook, ch 3, turn.
 <br><b>2nd Row: </b>dc in same space, 1 dc in next dc, 2 dc in next st, ch 3, turn.
 <br><b>3rd Row: </b>2 dc in same space, 1 dc in each of the next 3 dc, 3 dc in end st, ch 3, turn.
@@ -76,22 +67,9 @@ With White ch 5, join to form a ring, ch 3 and work 9 dc in ring, join in 3rd st
 <br><b>18th Row:</b> Same as 16th row but having 6 chs in each loop before and after each cluster st. 
 <br><b>19th Row:</b> Sl st into loop, ch 3, 4 dc in same space, ch 6, * sc in next cluster st, ch 6, 5 dc in center of next shell, ch 6, repeat from * all around ending row to correspond. 
 <br><b>20th Row:</b> Ch 3, dc in same space, 1 dc in each of the next 3 dc, 2 dc in next dc, * ch 6, sl st in next sc, ch 3, sl st in same space for picot, ch 6, 2 dc in next dc, 1 dc in each of the next 3 dc, 2 dc in next dc, repeat from * all around ending row to correspond, join. 
-
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-<br><br>
-
 </font> 
 </td></tr></table></center>
 </body></html>
