--- a/floral/irishrose.html
+++ b/floral/irishrose.html
@@ -1,20 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Irish Rose Doily - Free Vintage Crochet Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=12b_YV_5Hz8ICNP75re2oit4hLT6SGWB3&export=download"><img src="images/irishrose.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Irish Rose Doily - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Irish Rose Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-Star tatting cotton Article 25, 2 balls of each of white, shaded pink and green. Hook size 13 or 14.
+ <br>Star tatting cotton Article 25, 2 balls of each of white, shaded pink and green. Hook size 13 or 14.
 <br>Or<br>You could use any size 10 crochet cotton and any colors you like with a size 10 or 11 hook. The doily will be small. 9 inches. 
 <br><b>With White</b> ch 7, join to form a ring, ch 3, dc in ring, Ch 3 and work 7 cluster sts with ch 3 between each cluster st in ring, (cluster st: * thread over needle, insert in ring, pull through, thread over and pull through 2 loops, repeat from * once, thread over and pull through all loops at one time) ch 3, join in 3rd st of ch.
 <br><b>2nd Rnd:</b> Ch 1 and work 4 sc over each loop, join.
@@ -38,20 +29,9 @@ Star tatting cotton Article 25, 2 balls of each of white, shaded pink and green.
 times, ch 1, turn, sl st in center st of 3rd petal made of previous rose, ch 1, turn, 1 sc in each of the next 8 sc of leaf, 2 sc in next sc, ch 1 and having wrong side of doily toward you, sl st in next ch 7 loop of doily, ch 1, sc in same st of leaf, 1 sc in each of the next 7 sc of leaf, ch 3, turn, sl st in each of the next 3 sc, break thread.
 Work 7 more roses and 7 more leaves, alternating roses and leaves, joining 1st petal of rose to last picot of previous leaf and 2nd petal of rose to next ch 7 loop of doily. Join all leaves same as 1st leaf, joining last leaf to 1st petal of 1st rose to correspond.
 <br><br>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 </font> 
-
 </td></tr></table>
 </center>
 </body></html>
