--- a/floral/pansy3.html
+++ b/floral/pansy3.html
@@ -1,21 +1,12 @@
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>Free Crochet Pattern - Pansy Doily </title></head>
+<html><head><title> Pansy Doily - Free Crochet Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1SkwepoUpweUr71-B0XgRd96Vu1q-p1K3&export=download"><img src="images/pansy3.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Free Crochet Pansy Doily Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Pansy Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
- AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40 1 ball each White, Shaded Yellows, Shaded Lavenders and Kelly Green.  
+<br> AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40 1 ball each White, Shaded Yellows, Shaded Lavenders and Kelly Green.  
 <br>Approximate size: 12 inches in diameter. 
 <br>Steel crochet hook No. 7. 
 <br><br><b>Center:</b> With White or Silver Spangle chain (ch) 6, join to form a ring, ch 5, double crochet (dc) in ring, * ch 2, dc in ring, repeat from * 5 times, ch 2, join in 3rd stitch (st) of ch (8 spokes). <br><b>2nd Round:</b> Ch 1 and work 3 single crochet (sc) in each loop, join (24 sc) . 
@@ -33,18 +24,7 @@
 <br><b>2nd Row:</b> Slip stitch (sl st) to next dc, * 16 dc in next loop, sc in center dc of next dc group, repeat from * twice, ch 4, 12 double treble crochet ([dtrc] 3 times over hook) with ch 1 between each dtrc in next loop, ch 1, 2 treble crochet (trc) with ch 1  between in same loop, ch 1, 2 dc with ch 1 between in same loop, sc in center dc of next dc group, 2 dc with ch 1 between in next loop, ch 1, 2 trc with ch 1 between in same loop, ch 1, 12 dtrc with ch 1 between each dtrc in same loop, ch 4, join in sl st, cut thread. Work 7 more pansies in same manner. Work 8 more pansies with Shaded Lavender or Purple and Silver Spangle in same manner. <br>To join pansies to center pick up Green, * ch 4, sc in same space for picot, ch 3, join to 13th dc of 1st small petal of Yellow pansy, ch 4, sc in center of next shell on Center, join to center of next small petal of same pansy, sc in center of same shell on Center, ch 4, join to 4th dc of next small petal of same pansy, ch 3, sc in top of next cluster st on Center, repeat from * all around until all pansies are joined and alternating color of pansies while joining, join, cut thread. 
 <br><b>Edge:</b> Attach White or Silver Spangle in ch 4 loop of 1st large petal of any pansy, * ch 3, sc in next ch 1 space, repeat from * 14 times, sc in next sc between petals, sc in next ch 1 space of next large petal of same pansy, * ch 3, sc in next ch 1 space, repeat from * 13 times, ch 3, sc in ch 4 loop of same large petal, sc in 1st ch 4 loop of next pansy, work ch 3 loops across the 2 large petals same as on previous pansy. Continue in same manner across the 2 large petals of all pansies, join, cut thread. 
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 </font> 
 </td></tr></table></center>
