--- a/floral/papyrus.html
+++ b/floral/papyrus.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Papyrus Doily - Free Crochet Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1YUNQR7dI4Dz3RccpvdO1qoojx1yyR6oV&export=download&export=download"><img src="images/papyrus.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Papyrus Doily - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Papyrus Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
- AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED STAR SPANGLED CROCHET COTTON, Article 40 2 balls Silver Spangle or The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40 1 ball White, 1 ball Shaded Yellows or colors of your choice Steel crochet hook No. 7 App. size: 10 inches x 11 inches for "PURITAN" STAR SPANGLED 8 inches x 9 inches for "PURITAN"<br><b>1st Round:</b> With White or Silver Spangle * chain (ch) 5, treble crochet (trc) in 1st stitch (st) of ch, repeat from * 3 times, double crochet (dc) in base of 3rd trc, ch 5, trc in 1st st of ch, dc in base of 2nd trc, ch 5, trc in 1st st of ch, join in base of 1st trc.
+ <br>AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED STAR SPANGLED CROCHET COTTON, Article 40 2 balls Silver Spangle or The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40 1 ball White, 1 ball Shaded Yellows or colors of your choice Steel crochet hook No. 7 App. size: 10 inches x 11 inches for "PURITAN" STAR SPANGLED 8 inches x 9 inches for "PURITAN"<br><b>1st Round:</b> With White or Silver Spangle * chain (ch) 5, treble crochet (trc) in 1st stitch (st) of ch, repeat from * 3 times, double crochet (dc) in base of 3rd trc, ch 5, trc in 1st st of ch, dc in base of 2nd trc, ch 5, trc in 1st st of ch, join in base of 1st trc.
 <br><b>2nd Round:</b> Sl st to ch 5 loop, * ch 12, sc in same loop, repeat from * 3 times, sc in next loop, * ch 12, sc in same space, repeat from * once, sc in next loop, * ch 12, sc in same loop, repeat from * 3 times and complete Round to correspond, join.
 <br><b>3rd Round:</b> Sl st to top of loop, ch 1, 2 sc, ch 3, 2 sc over each loop, join.
 <br><b>4th Round:</b> Sl st to ch 3 loop, * ch 15, sc in same loop, repeat from * twice, * ch 1, sc in next loop, ch 15, sc in same loop, repeat from * 8 times, ch 1, sc in next loop, * ch 15, sc in same loop, repeat from * twice, ch 1. sc in next loop and complete Round to correspond, join.
@@ -29,19 +20,8 @@
 
 
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-<br><br>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
+<br><Br>
 
 </font> 
 </td></tr></table></center>
