--- a/floral/pondlily.html
+++ b/floral/pondlily.html
@@ -2,21 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Pond Lily Doily - Free Crochet Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=12--byXdyjoYyXAfUvxswCOBqLRXtjXNj&export=download&export=download"><img src="images/pondlily.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Pond Lily Doily - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Pond Lily Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-
- AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40 2 balls White and The Famous "PURITAN" STAR SPANGLED MERCERIZED CROCHET COTTON, Article 40 3 balls Sunshine Spangle or colors of your choice.
+<br> AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40 2 balls White and The Famous "PURITAN" STAR SPANGLED MERCERIZED CROCHET COTTON, Article 40 3 balls Sunshine Spangle or colors of your choice.
 <br>Steel crochet hook No. 8
 <br>22 inches in diameter
 <br><b>With White</b> ch 5, join to form a ring, ch 1 and work 8 sc in ring, join in 1st sc.
@@ -53,20 +43,10 @@ If ruffle is desired attach White in space between any 2 trc's of 18th round, * 
 <br><b>Next rnd:</b>* Ch 5, 2 - 3 trc cluster sts with ch 4 between in next loop, ch 5, sc in next loop, ch 6, sc in next loop, ch 6, sc in next loop, repeat from * all around ending to correspond and joining last ch 6 in trc, cut thread.
 <br><b>Next rnd:</b>Attach Sunshine Spangle in any loop, * ch 5, sc in next loop, repeat from * all around, join, cut thread.
 <br><b>DIRECTIONS FOR STARCHING</b>
-Starch: Dissolve ¼ cup starch in ½ cup of cold water. Boil about 1¼ cups of water, remove from flame, then slowly stir the starch mixture into boiling water stirring constantly. Place back on flame until it thickens.
-As soon as starch iscool enough to handle, dip doily and squeeze starch through it thoroughly. Wring out extra starch. The doily should be wet with starch but there should be none in the spaces. Pin center of doily in position accord­ing to size and leave until thoroughly dry. If steam iron is used iron ruffle after it is dry. If regular iron is used dampen ruffle slightly before pressing. Pin folds of ruffle in position and leave until thoroughly dry.
+Starch: Dissolve Â¼ cup starch in Â½ cup of cold water. Boil about 1Â¼ cups of water, remove from flame, then slowly stir the starch mixture into boiling water stirring constantly. Place back on flame until it thickens.
+As soon as starch iscool enough to handle, dip doily and squeeze starch through it thoroughly. Wring out extra starch. The doily should be wet with starch but there should be none in the spaces. Pin center of doily in position accordÂ­ing to size and leave until thoroughly dry. If steam iron is used iron ruffle after it is dry. If regular iron is used dampen ruffle slightly before pressing. Pin folds of ruffle in position and leave until thoroughly dry.
 <br><br>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
