--- a/floral/psy.html
+++ b/floral/psy.html
@@ -2,27 +2,12 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>PansyDoily - Free Crochet Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1UqAhbrBJZrLGAJz_VeQJEnUrBqT3vQ0Q&export=download&export=download"><img src="images/psy.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Pansy Doily - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Pansy Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-AMERICAN THREAD COMPANY The Famous "PURITAN" CROCHET COTTON or - The Famous "PURITAN" STAR SPANGLED CROCHET 1 ball White or 2 balls Sllver Spangle and The Famous "PURITAN" CROCHET COTTON 1 ball each Shaded Purples and Shaded Yellows steel crochet hook No. 7. <br><br>Personally I would use what colors I liked and I would use crochet cotton #10. I almost always use a size 11 hook. I am not sure what the size of the doily would be. Probably 1/3 larger than with the size 20 crochet cotton.
-
-
-<br><br>
-
-
-<b>CENTER:</b> With Sllver Spangle ch 6, join to form a ring, ch 5, dc in ring, * ch 2, dc in ring, repeat from * 5 times, ch 2, join in 3rd st of ch. 
-
+<br>AMERICAN THREAD COMPANY The Famous "PURITAN" CROCHET COTTON or - The Famous "PURITAN" STAR SPANGLED CROCHET 1 ball White or 2 balls Sllver Spangle and The Famous "PURITAN" CROCHET COTTON 1 ball each Shaded Purples and Shaded Yellows steel crochet hook No. 7. 
+<br><b>CENTER:</b> With Sllver Spangle ch 6, join to form a ring, ch 5, dc in ring, * ch 2, dc in ring, repeat from * 5 times, ch 2, join in 3rd st of ch. 
 <br><b>2nd Round:</b> Sl st into loop, ch 3, 3 dc in same space, * 4 dc in next loop, repeat from * all around, join. 
 <br><b>3rd Round:</b> * Ch 5, skip 1 dc, sl st in next dc, repeat from * all around ending with ch 2, dc in same space as beginning (this brings thread in poSltion for next round). 
 <br><b>4th Round: </b>* Ch 5, sl st in next loop, repeat from * all around ending with ch 5, sl st in dc. 
@@ -42,21 +27,7 @@ with ch 1 between in same loop, ch 1, 12 dtrc with ch 1 between each dtrc in sam
 <br><b>EDGE:</b> Attach Silver Spangle in ch 4 loop of 1st large petal of Yellow Pansy, * ch 3, sc in next ch 1 space, repeat from * 14 times, sc in next sc between petals, sc in next ch 1 space of next large petal of same pansy, * ch 3, sc in next ch 1 space, repeat from * 13 times, ch 3, sc in ch 4 loop of same large petal, sc in 1st ch 4 loop of Purple pansy, work ch 3 loops across the 2 large petals same as on previous pansy. Continue working edge and joining pansies in same manner alternating colors until all pansies are joined, cut thread leaving an end. 
 <br><b>TO JOIN PANSlES TO CENTER:</b> Attach Sllver Spangle in middle dc of any dc group of center, sc same space, join to center st of 2nd small petal of 1st pansy (to join: drop loop from book, insert in st, pick up loop and pull through), * sc in same space on center, ch 4, join in 4th dc of next small petal of same pansy, ch 3, 2 dc in middle of next shell on center, ch 3, sl st in top of last dc for picot, 2 dc in same space on center, ch 3, join to 13th dc of 1st small petal of next pansy, ch 4, sc in middle dc of next dc group on center, join to center st of next small petal of same pansy, repeat from * all around ending to correspond, join, cut thread. Sew last pansy to 1st pansy at edge.
 <br><br>
-
-
-<br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
