--- a/floral/rosebouquet.html
+++ b/floral/rosebouquet.html
@@ -2,28 +2,17 @@
 <html><head>
 <title>FREE Floral Rose Roses Bouquet - Crochet Doily Pattern</title>
 <meta name="Description" content="Here is a free calla lily crochet doily pattern.  A beautiful doily that would look lovely in any room in your home. It's made with crochet cotton. ">
-<meta name="Keywords" content="crotchety crotchet crotchetiness crocheted crocheting crochetings crotchets crotchetiest crotchetier crotchetinesses crochets crotchetily embroidery needlework sewing needlepoint needlecraft tapestry sampler tatting appliqué arabesque bargello brocade crewel cross stitch cross-stitch decoration lace lacery quilting tracery crewel work stitching fancywork tailoring stitchery darning crocheting knitting patchwork embroidering dressmaking mending patching backstitching basting hemming seaming wool work lace net netting openwork tatting filigree lacework mesh meshwork fishnet tulle webbing bobbinet filetUS filletUK needlepoint passementerie appliqué Brussels lace Chantilly lace guipure rosaline banding bobbin lace border duchesse lace edging needlepoint lace ornament pillow lace point lace threadwork tissue trim trimming Honiton lace Nottingham lace">
+<meta name="Keywords" content="crotchety crotchet crotchetiness crocheted crocheting crochetings crotchets crotchetiest crotchetier crotchetinesses crochets crotchetily embroidery needlework sewing needlepoint needlecraft tapestry sampler tatting appliquÃ© arabesque bargello brocade crewel cross stitch cross-stitch decoration lace lacery quilting tracery crewel work stitching fancywork tailoring stitchery darning crocheting knitting patchwork embroidering dressmaking mending patching backstitching basting hemming seaming wool work lace net netting openwork tatting filigree lacework mesh meshwork fishnet tulle webbing bobbinet filetUS filletUK needlepoint passementerie appliquÃ© Brussels lace Chantilly lace guipure rosaline banding bobbin lace border duchesse lace edging needlepoint lace ornament pillow lace point lace threadwork tissue trim trimming Honiton lace Nottingham lace">
 </head><body>
 <center>
-<table width="90%" height="100%" border="0" cellpadding="50" bgcolor="white"><tr><td>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script><br>
-<p align="right">
-<a href="https://drive.google.com/uc?id=19BDl48DkS8LAqqgFAyu08mH0RBVrbEIR&export=download"><img src="images/rosebouquet.jpg" align="right" width="400" height="425"></a>
-</p></center>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Floral Rose Bouquet - Crochet Doily Pattern</b></font><br><br>
+<table width="90%" height="100%" border="0" cellpadding="5"><tr><td>
+<p align="right"><a href="https://drive.google.com/uc?id=19BDl48DkS8LAqqgFAyu08mH0RBVrbEIR&export=download"><img src="images/rosebouquet.jpg" align="right" width="400" height="425"></a></p></center>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Floral Rose Bouquet</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-ROYAL SOCIETY SIX CORD CORDICHET, Large Ball, Size 30, 2 balls of (No. 3012) Lt. Steel Blue, 1 ball each of (No. 3011) Blue and (No. 3020) Nile Green.<br> ROYAL SOCIETY TATTING COTTON, 9 balls of White, 
+<br>ROYAL SOCIETY SIX CORD CORDICHET, Large Ball, Size 30, 2 balls of (No. 3012) Lt. Steel Blue, 1 ball each of (No. 3011) Blue and (No. 3020) Nile Green.<br> ROYAL SOCIETY TATTING COTTON, 9 balls of White, 
 <br>Steel Crochet Hooks No. 10 and No. 14. 
 <br>Doily measures 18 inches in diameter. 
-<br><br>Starting at Center with Lt. Steel Blue and No. 10 hook, ch 20. Join with sl st to form ring. 
+<br>Starting at Center with Lt. Steel Blue and No. 10 hook, ch 20. Join with sl st to form ring. 
 <br><b>1st rnd:</b> Ch 4, * dc in next ch, ch 1. Repeat from * around. Join to 3rd ch of ch-4. 
 <br><b>2nd rnd:</b> In each sp around make sc, half dc and sc. Join. 
 <br><b>3rd rnd:</b> Sl st around bar of starting chain in first rnd, ch 4, * dc around bar of next dc, ch 1. Repeat from * around. Join to 3rd ch of ch-4. 
@@ -77,17 +66,7 @@ ROYAL SOCIETY SIX CORD CORDICHET, Large Ball, Size 30, 2 balls of (No. 3012) Lt.
 
 
 <br><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- crochet stuff -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5410888958"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 
 <br><br>
 </td></tr></table></center>
