--- a/floral/rosescallops.html
+++ b/floral/rosescallops.html
@@ -2,24 +2,15 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Wild Rose Scallops Doily - Free Crochet  Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1f5CPzVbbMtAclHaiffZh8IAEGHwLLOtC&export=download&export=download"><img src="images/rosescallops.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Wild Rose Scallops Doily - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Wild Rose Scallops Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-Choose either of these J. &amp; P. Coats' threads.
-<br>J. &amp; P. Coats Best Six Cord Mercer-Crochet Cotton, Green Label 
+<br>Choose either of these J. & P. Coats' threads.
+<br>J. & P. Coats Best Six Cord Mercer-Crochet Cotton, Green Label 
 <br>Size 30; 1 ball of No. 623 Bright Nile Green and 1 ball of No. 695 Beauty
 Pink, or
-<br>J. &amp; P. Coats' Best Six Cord Mercer-Crochet Cotton, Blue Label
+<br>J. & P. Coats' Best Six Cord Mercer-Crochet Cotton, Blue Label
 <br>Size 30: 3 balls each of Nos. 623 Bright Nile Green and 695 Beauty Pink.
 <br>Steel Crochet Hook No. 10.</b>
 <br>Approximate Diameter 10-1/2 inches.</b>
@@ -50,18 +41,7 @@ skip 2 sps, dc in next sp, ch 3, sc in next dc on Motif, ch 3, sl st in next sp 
 <br><b>2nd rnd:</b> Attach Pink to first ch-9 sp on any Motif, 14 sc in same sp, 14 sc in each of next 5 sps, * 7 sc in each of next 2 sps, 14 sc in each of next 6 sps. Repeat from *around. Join and break off. Starch lightly and
 press.
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
