--- a/floral/rosew.html
+++ b/floral/rosew.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Rosewhirl Doily - Free Crochet Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1vDoydjYDUfYBpTCA7tmRzl4ijvX6fU0c&export=download&export=download"><img src="images/rosew.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Rosewhirl Doily - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Rosewhirl Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
- J. & P. COATS "BIG BALL" BEST SIX CORD MERCERIZED CROCHET, Art. A. 104, Size 30: 1 ball each of No. 1 White and No. 15-A Shaded Dk. Pinks; or CLARK'S "BIG BALL" MERCERIZED CROCHET, Art. B. 34, Size 30: 1 ball each of No. 1 White and No. 15-A Shaded Dk. Pinks. <br>Milwards Steel Crochet Hook No. 10. 
+<br>J. & P. COATS "BIG BALL" BEST SIX CORD MERCERIZED CROCHET, Art. A. 104, Size 30: 1 ball each of No. 1 White and No. 15-A Shaded Dk. Pinks; or CLARK'S "BIG BALL" MERCERIZED CROCHET, Art. B. 34, Size 30: 1 ball each of No. 1 White and No. 15-A Shaded Dk. Pinks. <br>Milwards Steel Crochet Hook No. 10. 
 <br>Doily measures 12 inches in diameter.
 <br>Starting at center with White, ch 9. Join with sl st to form ring. 
 <br><b>1st rnd:</b> 16 sc in ring. Join to first sc. 
@@ -46,18 +37,7 @@
 
 
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
