--- a/floral/rosewreath.html
+++ b/floral/rosewreath.html
@@ -1,23 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Rose Wreath Doily - Free Crochet Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1RkluaDqGv_FqB-kpCtk3OLd-PfK9Dzr-&export=download&export=download"><img src="images/rosewreath.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Rose Wreath Doily - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Rose Wreath Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
- COATS & CLARK'S O.N.T. TATTING-CROCHET, Art. C.21, Size 70: 6 balls of No. 1 White. 
-
-Milwards Steel Crochet Hook No. 14. <br><br>
-<b>1st rnd:</b> Starting at center, ch 10. Join with sl st to form ring.  Cut 16 strands of thread, each 10 inches long. Working over these strands, make 20 sc in ring. Join with sl St to first sc. Cut off remaining strands. 
+<br>COATS & CLARK'S O.N.T. TATTING-CROCHET, Art. C.21, Size 70: 6 balls of No. 1 White. 
+<br>Milwards Steel Crochet Hook No. 14.
+<br><b>1st rnd:</b> Starting at center, ch 10. Join with sl st to form ring.  Cut 16 strands of thread, each 10 inches long. Working over these strands, make 20 sc in ring. Join with sl St to first sc. Cut off remaining strands. 
 <br><b>2nd rnd:</b> Ch 4, * dc in next sc, ch 1. Repeat from * around. Join to 3rd ch of ch-4. 
 <br><b>3rd rnd:</b> Cut 16 strands of thread, each 10 inches long. Working over these strands, make sc in same place as sl st, * 2 sc in next sp, sc in next dc. Repeat from * around. Join. Cut off remaining strands. 
 <br><b>4th rnd:</b> Sc in same place as sl st, ch 5, skip 2 sc, sc in next sc. Repeat from * around. Join. 
@@ -50,18 +40,7 @@ Milwards Steel Crochet Hook No. 14. <br><br>
 <br><b>2nd row:</b> Sc in next 5 sc on Petal, half dc in next half dc, dc in next 8 dc, (2 dc in next dc, dc in next dc) 3 times; dc in next 7 dc, half dc in next half dc, sc in next 5 sc. Sl st in next sc on last rnd. Break off. Skip 5 sc on last rnd, attach thread to next sc, ch 17 and complete another Petal. Make 3 more Petals the same way. Sew Flowers and Leaves in place around Doily. Starch lightly and press. 
 
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
