--- a/floral/squarerose.html
+++ b/floral/squarerose.html
@@ -2,173 +2,45 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Square Rose Doily - Free Crochet Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1L-zBNeE3PC2_bNlAwNWgU9iLymNKZ9dS&export=download&export=download"><img src="images/squarerose.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Square Rose Doily - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Square Rose Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-The Famous "PURITAN" CROCHET COTTON, Article 40
-
-<br>
-
-or
-
-<br>
-
-"DELUXE" Quality CROCHET COTTON, Article 346
-
-
-
-1 ball each Ecru, Pink, Nile Green or Lt. Green or colors desired
-
-<br>
-
-Steel crochet hook No. 7
-
-
-
+<br>The Famous "PURITAN" CROCHET COTTON, Article 40
+<br>or<br>"DELUXE" Quality CROCHET COTTON, Article 346, 1 ball each Ecru, Pink, Nile Green or Lt. Green or colors desired
+<br>Steel crochet hook No. 7
 <br><b>1st Row:</b> With Pink ch 5, join to form a ring, ch 1 and work 8 sc in ring, join in 1st sc.
-
-
-
 <br><b>2nd Row:</b> * Ch 3, sc in next sc, repeat from * all around (8 loops).
-
-
-
 <br><b>3rd Row:</b>  Ch 1 and over each loop work 1 sc, 3 dc, 1 sc, join.
-
-
-
 <br><b>4th Row:</b> * Ch 4, sl st in back of work between next 2 petals, repeat from * 7 times.
-
-
-
 <br><b>5th Row:</b>  Ch 1 and over each loop work 1 sc, 4 dc, 1 sc, join.
-
-
-
 <br><b>6th Row:</b>  Same as 4th row but having 5 chs in each loop.
-
-
-
 <br><b>7th Row:</b>  Ch 1 and over each loop work 1 sc, 6 dc, 1 sc, join.
-
-
-
 <br><b>8th Row:</b>  Same as 4th row but having 6 chs in each loop.
-
-
-
 <br><b>9th Row:</b>  Ch 1 and over each loop work 1 sc, 8 dc, 1 sc, join.
-
-
-
 <br><b>10th Row:</b>  Same as 4th row but having 7 chs in each loop.
-
-
-
 <br><b>11th Row:</b>  Ch 1 and over each loop work 1 sc, 10 dc, 1 sc, join
-
-
-
 <br><b>12th Row:</b>  Same as 4th row but having 8 chs in each loop.
-
-
-
 <br><b>13th Row:</b>  Ch 1 and over each loop work 1 sc, 12 dc, 1 sc, join
-
-
-
 <br><b>14th Row:</b>  Same as 4th row but having 9 chs in each loop.
-
-
-
 <br><b>15th Row:</b>  Ch 1 and over each loop work 1 sc, 14 dc, 1 sc, join.
-
-
-
 <br><b>16th Row:</b>  Same as 4th row but having 10 chs in each loop.
-
-
-
 <br><b>17th Row:</b>  Ch 1 and over each loop Work I sc, 3 dc, 10 tr c, 3 dc, 1 sc, join, cut thread.
-
-
-
 <br><b>LEAVES:</b>  Attach Green in 14th row in back of work between any 2 petals, ch 10, sc in 2nd st from hook, 1 s dc in each of the next 2 sts of ch (sdc: thread over hook, insert in st, pull through, thread over and pull through all loops at one time), 1 dc in each remaining st of ch, sc in same space of same row in back of work, ch 1 2, sc in 2nd st from hook, 1 s dc in each of the next 2 sts of ch, 1 dc in each remaining st of ch, sc in same space in back of work, ch 10 and work back on ch same as on previousch, sc in some row in back of work, cut thread.
-
-<br>
-
-Work another group of leaves in same manner between 3rd and 4th petals,
-
-
-
-5th and 6th petals and 7th and 8th petals (4 groups of leaves).
-
-<br>
-
-Attach Ecru in tip of center leaf of any corner, * ch 6, sc in tip of next leaf, ch 6, dc in 3rd tr c of next pets!, ch 6, skip 4 sts of some petal, dc in next st, ch 6, dc in 3rd tr c of next petal, ch 6, skip 4 sts of some petal, dc in next st, ch 6, sc in tip of 1st leaf of corner, ch 6, sc in tip of next leaf, repeat from * all around.
-
-
-
+<br>Work another group of leaves in same manner between 3rd and 4th petals, 5th and 6th petals and 7th and 8th petals (4 groups of leaves).
+<br>Attach Ecru in tip of center leaf of any corner, * ch 6, sc in tip of next leaf, ch 6, dc in 3rd tr c of next pets!, ch 6, skip 4 sts of some petal, dc in next st, ch 6, dc in 3rd tr c of next petal, ch 6, skip 4 sts of some petal, dc in next st, ch 6, sc in tip of 1st leaf of corner, ch 6, sc in tip of next leaf, repeat from * all around.
 <br><b>2nd Row:</b>  Ch 1, sc in same space, ** 5 sc in next loop, sc in next sc, * 5 sc in next loop, sc in next dc, repeat from * 3 times, * 5 sc in next loop, sc in next sc, repeat from * once, repeat from ** all around ending to correspond, join.
-
-
-
 <br><b>3rd Row:</b>  Ch 10, dc in same space, * ch 1, skip 1 sc, dc in next sc, repeat from * all around working 1 dc, ch 7, 1 dc in center st at each corner (2) meshes on each side not counting corners), ch 1, join in 3rd st of ch.
-
-
-
 <br><b>4th Row:</b>  Sl st into loop, ch 5, tr c in same space, * ch 1, tr c in same space, repeat from a 5 times, ** skip 1 mesh, 3 dc in next mesh, * ch 1, skip 1 mesh, 3 dc in next mesh, repeat from * 8 times, skip 1 mesh, 8 tr c with ch 1 between each tr c in corner loop, repeat from ** all around ending to correspond, join in 4th st of ch.
-
-
-
 <br><b>5th Row:</b>  Ch 5, tr c in same space, * ch 1, 1 tr c, ch 1, 1 tr c in next tr c, repeat from * 6 times, skip 3 dc, 3 dc in next ch 1 space, * ch 1, 3 dc in next ch 1 space, repeat from * 7 times, skip 3 dc, 1 tr c, ch 1, 1 tr c in next tr c, repeat from 1st * all around ending to correspond, join in 4th st of ch.
-
-
-
-6th Row:</b>  Ch 6, tr c in next tr c, * ch 2, tr c in next tr c, repeat from * 13 times, ** skip 3 dc, 3 dc in next ch 1 space, * ch 1, 3 dc in next ch 1 space, repeat from * 6 times, tr c in next tr c, * ch 2, tr c in next tr c, repeat from * 14 times, repeat from ** all around ending to correspond, join in 4th st of ch.
-
-
-
+<br><b>6th Row:</b>  Ch 6, tr c in next tr c, * ch 2, tr c in next tr c, repeat from * 13 times, ** skip 3 dc, 3 dc in next ch 1 space, * ch 1, 3 dc in next ch 1 space, repeat from * 6 times, tr c in next tr c, * ch 2, tr c in next tr c, repeat from * 14 times, repeat from ** all around ending to correspond, join in 4th st of ch.
 <br><b>7th Row:</b>  Ch 7 and work same as last row but having 3 chs between each tr c around corners and having 7 groups of dc on each side.
-
-
-
 <br><b>8th Row:</b>  Ch 8 and work same as last row but having 4 chs between each tr c and having 6 groups of dc on each side.
-
-
-
 <br>Work 5 more rows in same manner starting each row with 1 more ch and having 1 more ch between each tr c in each row and 1 less group of dc on each side in each row ( 1 group of dc left on each side), cut thread.
-
-
-
 <br><b>EDGE:</b>  Attach Green in center st of 3 dc group, * ch 4, sl st in center st of next loop, ch 3, sl st in same space, ch 4, sc in next tr c, ch 4, sc in 2nd st from hook, s dc in next st of ch, dc in next st of ch, sl st in same tr c, repeat from * 13 times, ch 4, sl st in center st of next loop, ch 3, sl st in some space, ch 4, sc in center dc of the 3 dc group, repeat from 1st * all around, join, cut thread.
-
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-
-<br><br>
-
 </font> 
 </td></tr></table></center>
 </body></html>
