--- a/floral/sunflower.html
+++ b/floral/sunflower.html
@@ -2,23 +2,14 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Free Crochet Pattern - Giant Sunflower Doily </title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<p align="right"><a href="https://drive.google.com/uc?id=12WLdys147Umqsn9zYlOUQeBv7adAz_tz&export=download"><img src="images/sunflower.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Giant Sunflower Crochet Doily Pattern</b></font><br><br>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
+<p align="right"><a href="https://drive.google.com/uc?id=13hjPTOiUxE_ImxIQu3lqilcIJ0npGAKV&export=download"><img src="images/sunflower.jpg" align="right"  width="400" height="425" border="0"></a></p>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Giant Sunflower Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-J. & P. COATS "KNIT-CRO-SHEEN 1 ball each of No. 42 Cream, No. 131 Fudge Brown and No. 19 Shaded Yellows. <br>
+<BR>J. & P. COATS "KNIT-CRO-SHEEN 1 ball each of No. 42 Cream, No. 131 Fudge Brown and No. 19 Shaded Yellows. <br>
 Milwards Steel Crochet Hook No. 7. 
-<br>Doily measures 15 1/2 inches in diameter.<br><br>
-Starting at center with Brown, ch 5. Join with sl st to form ring. 
+<br>Doily measures 15 1/2 inches in diameter.
+<br>Starting at center with Brown, ch 5. Join with sl st to form ring. 
 <br><b>1st rnd:</b> Ch 1, 12 sc in ring. Join to first sc. 
 <br><b>2nd rnd:</b> Ch 1, sc in joining, (3 dc in next sc, sc in next sc) 5 times; 3 dc in next sc. Join as before. 
 <br><b>3rd rnd:</b> Ch 1, sc in joining, (ch 2, holding petals forward, sc in next sc) 5 times; ch 2. Join. 
@@ -57,19 +48,7 @@ Starting at center with Brown, ch 5. Join with sl st to form ring.
 <br><b>29th rnd:</b> Ch 6, tr in next loop, * (ch 2, dc in next loop) 4 times; (ch 2, tr in next loop) 3 times. Repeat from * around, ending with ch 2. Join to 4th ch of ch-6. 
 <br><b>30th rnd:</b> Ch 1, sc in joining, * skip next 2 ch, in next st make 2 dc, ch 5 and 2 dc skip next 2 ch, sc in next st. Repeat from * around. Join last dc to first sc. Break off and fasten. Press. 
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 </font> 
 </td></tr></table></center>
