--- a/floral/tdaisy.html
+++ b/floral/tdaisy.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Three Way Doily - Free Crochet Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1qavfKpZjUJnRO8itvYMSJVx91DJhjZUt&export=download&export=download"><img src="images/tdaisy.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Three Way Doily - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Three Way Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40 2 balls White 1 ball each Shaded Lt. Pinks, Buttercup and Nile Green will make all 3 doilies Approximate size round doily: 12 inches in diameter Approximate size small oval doily: 10 inches x 13 inches Approximate size large oval doily: 10 inches x 16 inches or The Famous "PURITAN" STAR SPANGLED MER-CERIZED CROCHET COTTON, Article 40 4 balls Silver Spangle 2 balls each Pink Spangle, Sunshine Spangle and Chartreuse Spangle will make 3 doilies Approximate size round doily: 13 1/2 inches in diameter Approximate size small oval doily: 12 inches x 16 1/2 inches Approximate size large oval doily: 12 inches x 20 inches Steel crochet hook No. 7 
+<br>AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40 2 balls White 1 ball each Shaded Lt. Pinks, Buttercup and Nile Green will make all 3 doilies Approximate size round doily: 12 inches in diameter Approximate size small oval doily: 10 inches x 13 inches Approximate size large oval doily: 10 inches x 16 inches or The Famous "PURITAN" STAR SPANGLED MER-CERIZED CROCHET COTTON, Article 40 4 balls Silver Spangle 2 balls each Pink Spangle, Sunshine Spangle and Chartreuse Spangle will make 3 doilies Approximate size round doily: 13 1/2 inches in diameter Approximate size small oval doily: 12 inches x 16 1/2 inches Approximate size large oval doily: 12 inches x 20 inches Steel crochet hook No. 7 
 <br><b>ROUND DOILY MOTIF-CENTER</b><br> With Buttercup or Sunshine Spangle, chain (ch) 5, join to form a ring, ch 1 and work 8 single crochet (sc) in ring, join in 1st sc. 
 <br><b>2nd Round:</b> 2 sc in each sc, join, cut thread. Work another center in same manner. 
 <br><b>3rd Round:</b> Place wrong sides of centers together. Attach Green or Chartreuse Spangle in any sc, working through both thicknesses and inserting a little cotton between sections, * ch 3, sc in next sc, repeat from * all around, join, cut thread. 
@@ -55,23 +46,9 @@ Work 2 motifs joining same as for small oval doily. Work a 3rd motif joining to 
 <br><b>8th Round:</b> Attach Buttercup or Sunshine Spangle in next loop, ** ch 3, sc in next loop, * ch 5, sc in next loop, repeat from * 8 times, repeat from ** once, sc in next loop, * ch 5, sc in next loop, repeat from * 8 times, sc in next loop, * ch 5, sc in next loop, repeat from * 8 times, ** ch 3, sc in next loop, * ch 5, sc in next loop, repeat from * 8 times, repeat from last ** 3 times, finish round to correspond, join, cut thead. 
 <br><b>9th Round:</b> Attach Green or Chartreuse Spangle in last loop worked, ** ch 5, skip next loop, sc in next loop, * ch 6, sc in next loop, repeat from * 7 times, repeat from once, ** ch 5, sc in next loop, * ch 6, sc in next loop, repeat from * 7 times, repeat from last ** once, ** ch 5, skip next loop, sc in next loop, * ch 6, sc in next loop, repeat from * 7 times, repeat from last ** 3 times, finish round to correspond, join, cut thread. <br><b>10th Round:</b> Attach Pink in last loop worked, ** ch 4, sc in next loop, ch 4, sc in next loop, * ch 7, sc in next loop, repeat from * 6 times, repeat from ** all around, join. 
 <br><b>11th Round:</b> * Insert hook in next loop, pull loop through, repeat from * once, thread over and pull through all loops at one time, * ch 2, 2 sc, ch 3, 2 sc in next loop, repeat from * 6 times, ** ch 2, * insert hook in next loop, pull loop through, repeat from * once, thread over and pull through all loops at one time, * ch 2, 2 sc, ch 3, 2 sc in next loop, repeat from * 6 times, repeat from ** all around, ch 2, join, cut thread. 
-
-
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-<br><br>
-
 </font> 
 </td></tr></table></center>
 </body></html>
