--- a/floral/thepansy.html
+++ b/floral/thepansy.html
@@ -1,20 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>The Pansy Doily - Free Vintage Crochet Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1lUQsgfhS_ySaFtt42_Tvaczq0qYfvyEO&export=download"><img src="images/thepansy.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>The Pansy Doily - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">The Pansy Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-Approximate Size 12 1/2 inches in diameter This doily can be made with the following: The Famous "PURITAN" CROCHET COTTON, Article 40 or "DE LUXE" QUALITY CROCHET COTTON, Article 346 1 ball each White, Kelly Green and Tinted Lavender & Yellow Steel crochet hook No. 7 
+<br>Approximate Size 12 1/2 inches in diameter This doily can be made with the following: The Famous "PURITAN" CROCHET COTTON, Article 40 or "DE LUXE" QUALITY CROCHET COTTON, Article 346 1 ball each White, Kelly Green and Tinted Lavender & Yellow Steel crochet hook No. 7 
 <br><b>PANSY</b> With Tinted Lavender and Yellow ch 6, join to form a ring, ch 3, 2 dc in ring, * ch 7, 3 dc in same space, repeat from * twice, ch 10, 3 dc in same space, ch 10, join in 3rd st of ch. Place a marker at joining. 
 <br><b>2nd Round:</b> Sl st in next st, * 9 sc in next loop, skip 1 dc of next dc group, sl st in next dc, repeat from * twice, 11 dc in next loop, sdc in same space (sdc: thread over hook, insert in space, pull loop through, thread over and work off all loops at one time), 2 sc in same space, sl st in center dc of next dc group, 2 sc in next loop, sdc in same space, 11 dc in same space, sl st in joining. 
 <br><b>3rd Round:</b> Skip the next sl st and 1 sc, * sc in next sc, 2 sc in each of the next 2 sc, sc in next sc, 2 sc in each of the next 2 sc, sc in next sc, skip 1 sc, 1 sl st and 1st st of next petal, repeat from * twice, sc in next st, sdc in next st, 2 dc in next dc, dc in next dc, 2 dc in each of the next 6 dc, sc in next st, sc in next st, skip 1 sc, 1 sl st and 1st st of next petal, sc in next st, sdc in next st, 2 dc in each of the next 6 dc, dc in next dc, 2 dc in next dc, sdc in next dc, sc in next dc, skip 1 st, join. 
@@ -36,19 +27,8 @@ Approximate Size 12 1/2 inches in diameter This doily can be made with the follo
 <br><b>6th Round:</b> Attach Green in center of 1st shell of any shell group, sc in same space, ch 3, sc in same space, ** ch 4, 2 dc, ch 3, 2 dc (dc shell) in next shell, ch 4, 1 sc, ch 3, 1 sc in next shell, ch 4, skip the next ch 3 loop, 1 sc, ch 3, 1 sc in next ch 3 loop, * ch 4, 1 sc, ch 3, 1 sc in next large loop, ch 4, 1 sc, ch 3, 1 sc in next ch 3 loop, repeat from * 4 times, ch 4, 1 sc, ch 3, 1 sc in next shell, repeat from ** all around ending to correspond, ch 4, join in 1st sc, cut thread. 
 <br><b>7th Round:</b> Attach White in center of dc shell, sc in same space, ch 3, sc in same space, * ch 4, 1 sc, ch 3, 1 sc in next ch 3 loop, repeat from * 12 times, ch 4, 1 sc, ch 3, 1 sc in next shell, repeat from 1st * all around ending to correspond, join, cut thread. <br><b>8th Round:</b> Attach Green in ch 3 loop above dc shell, ch 3, 1 dc, ch 3, 2 dc in same space, * ch 3, 1 sc, ch 3, 1 sc in next ch 3 loop, ch 3, dc shell in next ch 3 loop, repeat from * all around ending to correspond, join in 3rd st of ch, cut thread. 
 <br><b>Next Round:</b> Ch 6, sl st in 3rd st from hook for picot, * ch 3, dc in next sc, ch 3, sl st in top of dc just made for picot, repeat from * 9 times, ** ch 3, thread over hook, insert in next sc, thread over and work off 2 loops, thread over hook, skip the sc that joins the 6 loops together, insert hook in next sc, thread over and work off 2 loops, thread over and work off remaining loops at one time, ch 3 picot, * ch 3, dc in next sc, ch 3 picot, repeat from * 9 times, repeat from ** all around ending with ch 3, dc in next sc, join in 3rd st of ch under the picot, cut thread. Lightly press.
-
 <br><br>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 </font> 
 <br><br>
 </td></tr></table>
