--- a/floral/valley.html
+++ b/floral/valley.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title> Valley Lily Doily - Free Crochet</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1gPSkbtx0agOBRwq6-Ine0CUroaCN7xrI&export=download"><img src="images/valley.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Valley Lily - Free Crochet Doily Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Valley Lily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
- AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40 2 balls White 1 ball Violet Approximate size 21 inches in diameter or The Famous "PURITAN" STAR SPANGLED MERCERIZED CROCHET COTTON, Article 40 4 balls Silver Spangle 1 ball Blue Spangle or colors of your choice <br>Approximate size: 22 inches in diameter and "STAR" MERCERIZED EMBROIDERY COTTON, Article 50 1 Skein Medium Orange 
+<br>AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40 2 balls White 1 ball Violet Approximate size 21 inches in diameter or The Famous "PURITAN" STAR SPANGLED MERCERIZED CROCHET COTTON, Article 40 4 balls Silver Spangle 1 ball Blue Spangle or colors of your choice <br>Approximate size: 22 inches in diameter and "STAR" MERCERIZED EMBROIDERY COTTON, Article 50 1 Skein Medium Orange 
 <br>Steel crochet hook No. 7. 
 <br><b>1st Round:</b> With White or Silver Spangle chain (ch) 6, join to form a ring, ch 6, double crochet (dc) in ring, * ch 3, dc in ring, repeat from * 5 times, ch 3, join in 3rd stitch (st) of ch. 
 <br><B>(8 ch 3, spaces).</b>
@@ -43,17 +34,7 @@
 <br><b>23rd Round:</b> Ch 4, keeping last loop of each st on hook, work 1 trc in each of the next 3 trc, thread over and work off all loops at one time, ** ch 7, * sl st in 4th st from hook for picot, ch 3, 2 trc cluster in next trc, ch 7, repeat from * 4 times, sl st in 4th st from hook, ch 3, 4 trc cluster over next 4 trc group, ch 7, sl st in 4th st from hook, ch 3, * 2 trc cluster in next trc, ch 7, sl t in 4th st from hook, ch 3, repeat from * 4 times, 4 trc cluster over next 4 trc group, 4 trc cluster over next 4 trc group, repeat from ** all around ending to correspond, join, cut thread. 
 <br><b>Flower:</b> With Lavender or Blue Spangle ch 4, join to form a ring, * ch 3, keeping last loop of each st on hook work 2 dc in ring, thread over and work off all 3 loops at one time, ch 3, sl st in ring, repeat from * until 6 petals are completed, cut thread, fasten securely. Work 23 more flowers in same manner. With Medium Orange, embroider a French Knot in center of each flower. Sew in position as illustrated. Block to measurements. 
 <br><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- crochet stuff -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5410888958"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 </font> 
 </td></tr></table></center>
