--- a/floral/wildrose2.html
+++ b/floral/wildrose2.html
@@ -2,21 +2,12 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Wild Rose2 Doily - Free Crochet Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1vJthdeu1eNEInxDaA3HKQzpnbKa3LLGy&export=download&export=download"><img src="images/wildrose2.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Wild Rose2 Doily - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Wild Rose Doily2</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
- Daisy Mercerized Crochet Cotton, size 20, was used to crochet this piece. You will need rose, green, yellow and white; use a size 9 or 10 steel crochet hook. One medallion measures about 3 1/2 inches. The completed piece is about 12 inches across. 
-<br><b>Abbreviations:</b> Ch (chain); sc (single crochet); tr (treble)—thread over twice, work off 2 lps at a time; dc (double crochet); st (stitch); sl st (slip stitch); sk (skip); rnd (round); tr tr (triple treble)—thread over four times, work off 2 lps at a time; dtr (double treble) — thread over three times, work off 2 lps at a time. 
+<br>Daisy Mercerized Crochet Cotton, size 20, was used to crochet this piece. You will need rose, green, yellow and white; use a size 9 or 10 steel crochet hook. One medallion measures about 3 1/2 inches. The completed piece is about 12 inches across. 
+<br><b>Abbreviations:</b> Ch (chain); sc (single crochet); tr (treble)â€”thread over twice, work off 2 lps at a time; dc (double crochet); st (stitch); sl st (slip stitch); sk (skip); rnd (round); tr tr (triple treble)â€”thread over four times, work off 2 lps at a time; dtr (double treble) â€” thread over three times, work off 2 lps at a time. 
 <br><b>Medallion:</b> <br>In white, ch 7, join with sl st in first ch to form a ring. 
 <br><b>Rnd 1:</b> Ch 1, 12 sc in ring. 
 <br><b>Rnd 2:</b> Ch 5, dc in next st, * ch 2, dc in next st, repeat from * around, join last ch 2 in third ch of ch 5 first made (12 sps). 
@@ -34,18 +25,7 @@
 
 
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
